优化版面细节

--- a/tex/body/M00.00-Introduction.tex
+++ b/tex/body/M00.00-Introduction.tex
@@ -1,4 +1,6 @@
-\chapterx{——~物理世界的统一}\label{chp:00}
+\ctexset{chapter={number={\quad},name={绪,论}}}
+\chapter{—— ~ 物理世界的统一}
+\ctexset{chapter={number={\chinese{chapter}},name={第,章}}}
 
 物理学的兴起，是从经典力学开始的。在经典力学之前，人类
 的文明中虽然已有不少具有物理价值的发现和发明，但是并不存
@@ -71,7 +73,7 @@
 了电磁理论，使电、磁及光学现象得到统一。这就是电动力学。
 
 很快发现，牛顿的力学和麦克斯韦的电磁学这两大领域在时
-\begin{tablex}[!h]
+\begin{table}[!h]
   \centering
   \caption{物理学发展中的统一$^*$}\label{tab:00.01}
   \begin{tabular}{c}
@@ -80,7 +82,7 @@
     \bottomrule
     \zihao{6}* 括号中的数字表示相应的理论建立的年代；有问号的表示尚未完成。
   \end{tabular}
-\end{tablex}
+\end{table}
 \clearpage\noindent 空观上是很不协调的。在前者中，各种匀速运动是平权的，但却
 假定有绝对空间或绝对速度存在。相反，在后者中，有一个地位
 特殊的速度，即光速，但却始终测不出这个特殊的速度是相对于
