--- a/tex/body/M01.01-Time.tex
+++ b/tex/body/M01.01-Time.tex
@@ -42,7 +42,7 @@
 \end{figure}
 
 \clearpage
-图\ref{fig:01.01}~给出不同年代用不同的钟测量时间所达到的精度。可以
+图\ref{fig:01.01}给出不同年代用不同的钟测量时间所达到的精度。可以
 看到，地球自转要比各种机械的钟都好。所以，1967年以前是用
 地球自转作为标准钟。原子钟是比地球自转更加稳定的钟，现代
 的精密计时都是用原子钟了。
@@ -50,16 +50,16 @@
 \begin{table}[!h]
   \centering
   \caption{一些典型物理现象的时间尺度}\label{tab:01.01}
-  \begin{tabular*}{\linewidth}{>{\centering}m{\linewidth}c}
+  \begin{tabular}{c}
     \toprule
-    \makecell[c]{\includegraphics[width=0.8\linewidth]{figure/tab01.01}} & \\
+    \includegraphics[width=0.8\linewidth]{figure/tab01.01} \\
     \bottomrule
-  \end{tabular*}
+  \end{tabular}
 \end{table}
 \clearpage
 1967年10月在第十三届国际度量衡会议上通过了新的标准
 钟，它对一秒的时间作如下的规定；位于海平面上的$^{133}$Cs原子
-的基态的两个超精细能级在零磁场中跃迁辐射的周期$T$与1秒的
+的基态的两个超精细能级在零磁场中跃迁辐射的周期$T$与$ 1 $秒的
 关系为
 \begin{equation*}
   1 \,\text{秒} = 9,192,631,770\,T
@@ -67,10 +67,10 @@
 
 表\ref{tab:01.01}~列举了一些典型现象的时间尺度。目前，物理学中涉及
 的最长的时间是：\num{e38}秒，它是质子寿命的下限。宇宙的年龄大约
-是\num{6e17}秒，即200亿年。牛顿力学所涉及的时问尺度大约是
+是 \num{6e17}秒，即$ 200 $亿年。牛顿力学所涉及的时问尺度大约是
 \num{e-3}$\sim$\num{e15}秒，即从声振动的周期到太阳绕银河中心转动的周期。
-粒子物理的时间尺度都很小。$\mu$子的寿命是\num{2e-6}~秒。已经算是
-极长寿的了。最短寿的是一些共振粒子，它们的寿命只约有~\num{e-24}
-秒。目前物理学中涉及的最小的时间是\num{e-42}秒，称为普朗克时
+粒子物理的时间尺度都很小。$\mu$子的寿命是 \num{2e-6} 秒。已经算是
+极长寿的了。最短寿的是一些共振粒子，它们的寿命只约有 \num{e-24}
+秒。目前物理学中涉及的最小的时间是 \num{e-42}秒，称为普朗克时
 间。普朗克时间被认为是最小的时间，比普朗克时间还要小的范
 围内，时间的概念可能就不再适用了。
