--- a/tex/body/M01.04-Reference Frame.tex
+++ b/tex/body/M01.04-Reference Frame.tex
@@ -8,13 +8,12 @@
 
 牛顿意义下的运动学，就是研究如何描写物体位置的变化。
 
-\renewcommand{\hsp}{\hspace{0.1em}}
 研究问题总是从简单的情况入手。我们首先讨论一种被称为
 质点的物体，即大小为零的物体。我们知道，任何具体的物体总
 是有一定大小的，没有任何一个物体与质点完全等价。但是，对
 于某些特定的运动来说，可以足够准确地把物体看作一个质点。
-譬如，在讨论地球绕太阳的公转时，由于地球的半径\hsp(约\hsp 6,400\hsp 公
-里)\hsp 比地球与太阳的距离\hsp (约\hsp 149,504,000\hsp 公里)\hsp 小得多，把地球作
+譬如，在讨论地球绕太阳的公转时，由于地球的半径(约$ 6,400 $公
+里)比地球与太阳的距离(约$ 149,504,000 $公里)小得多，把地球作
 为质点是相当好的近似，或者说，在此情况下，将地球作为质点
 处理，是一个足够准确的模型。显然，这种模型是有一定适用限
 度的。当讨论到地表问题时，再把地球看作质点就大谬不然了。
@@ -29,13 +28,10 @@
 方法，首先要给出坐标系，坐标值总是相对于一定的坐标系而言
 的。在数学上，坐标系的选取是完全任意的，但在物理上，我们
 要对描写运动的各种物理量进行实际测量，坐标必须固定在一定
-\begin{wrapfigure}[11]{l}{48mm}
-  %\vspace{-0.5em}
-  %\zihao{-5}
+\begin{wrapfigure}[11]{l}{13em}
   \includegraphics{figure/fig01.04}
   \caption{参考系$K$及参考坐标系$OXYZ$}
   \label{fig:01.04}
-  %\vspace{-1.2em}
 \end{wrapfigure}
 的物体上。例如，如果选取物体$K$上的某点$O$为坐标原点，并选
 定$x$，$y$，$z$三个轴，质点$A$的位置即由$x$，$y$，$z$所确定(图\ref{fig:01.04})。
@@ -46,20 +42,17 @@
 置。我们定义质点$A$的位置矢量$\vec{r}$的大小为$OA$的长度，而方向从
 $O$指向$A$。用这个矢量就完全确定了质点$A$的位置。在图1.4的坐
 标系中，位置矢量$r$的分量就是坐标$x$，$y$，$z$，或写为
-\begin{align}\label{eqn:01.04.01}
+\begin{equation}\label{eqn:01.04.01}
   \vec{r}=x\vec{i}+y\vec{j}+z\vec{k}
-\end{align}
+\end{equation}
 其中$\vec{i}$，$\vec{j}$，$\vec{k}$分别为$X$，$Y$，$Z$轴上的单位矢量，上述两种描述
 质点$A$的位置的方法，是完全等价的。
 
 参考系的选择是任意的，可以不用参考系$K$，而用另外一
-\begin{wrapfigure}[9]{r}{47mm}
-  %\vspace{-0.5em}
-  %\zihao{-5}
+\begin{wrapfigure}[9]{r}{13em}
   \includegraphics{figure/fig01.05}
   \caption{\ziju{-0.02}从不同参考系观察同一运动}
   \label{fig:01.05}
-  %\vspace{-1.2em}
 \end{wrapfigure}
 个参考系$K'$，譬如，用运动着的车辆来描述质点$A$的位置。由图\ref{fig:01.05}
 看到，对干参考系$K$，质点$A$的位置由矢量$\vec{r}$描写，而对于参考
