--- a/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
+++ b/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
@@ -7,7 +7,7 @@
   \langle \vec{v} \rangle_{t_1\rightarrow t_2}=\frac{\vec{r}\left(t_2\right)-\vec{r}\left(t_1\right)}{t_2-t_1}=\frac{\Delta \vec{r}}{\Delta t}
 \end{equation}
 
-\noindent 将其与式\eqref{eqn:01.06.01}~对比可见。只是将其中的$x\left(t\right)$换成了相应的
+\clearpage\noindent 将其与式\eqref{eqn:01.06.01}~对比可见。只是将其中的$x\left(t\right)$换成了相应的
 $\vec{r}\left(t\right)$。在\eqref{eqn:01.07.01}~中，$\Delta t=t_2-t_1$，$\Delta \vec{r}=\vec{r}\left(t_2\right)-\vec{r}\left(t_1\right)$，
 后者是$t_1$到$t_2$间隔
 \begin{wrapfigure}[8]{r}{12em}
