--- a/tex/body/M01.09-Circular Motion And Angular Velocity.tex
+++ b/tex/body/M01.09-Circular Motion And Angular Velocity.tex
@@ -41,7 +41,7 @@ $\varphi\left(t+\Delta t\right)$，所以在$\Delta t$间隔中质点
              & =r|\Delta \varphi|
   \end{aligned}
 \end{equation*}
-将此式代入式\eqref{eqn:01.07.05}，就得到圆周运动的速率\vspace{-0.7em}
+将此式代入式\eqref{eqn:01.07.05}，就得到圆周运动的速率
 \setlength{\mathindent}{6em}
 \begin{equation}\label{eqn:01.09.01}
   v=\lim _{\Delta t \rightarrow 0} \frac{r|\Delta \varphi|}{\Delta t}=r \lim _{\Delta t \rightarrow 0} \frac{|\Delta \varphi|}{\Delta t}
