--- a/tex/body/M01.13-Exercises.tex
+++ b/tex/body/M01.13-Exercises.tex
@@ -43,8 +43,10 @@
 
 (3)用微分方法求它的速度及加速度公式。
 
-\exercise 有一质点沿x方向作直线运动，t时刻的坐标为：\\
-\null\qquad\qquad \qquad $x=4.5t^2-2t^3$\\
+\exercise 有一质点沿x方向作直线运动，t时刻的坐标为：
+\begin{equation*}
+    x=4.5t^2-2t^3
+\end{equation*}
 式中$x$的单位为米。$t$的单位为秒。试求：
 
 (1)第2秒内的位移和平均速度；
@@ -60,10 +62,8 @@
 的角速度为常量，其大小为$\omega=\dot\theta=2$弧度/秒。当质点距原点为3
 米时，它的速度的大小及加速度大小是多少？
 
-{
 \exercise 如图\ref{fig:01.29}~所示，向上抛一物体，测量物体上抛及下落经
-\begin{wrapfigure}[8]{r}{12.5em}
-  \vspace{1em}
+\begin{wrapfigure}[10]{r}{13em}
   \begin{center}
     \includegraphics{figure/fig01.29}
     \caption{}
@@ -73,14 +73,18 @@
 过水平线$A$的时差$T_A$，以及上抛
 及下落经过水平线$B$的时差$T_B$。
 试证明，若忽略空气阻力，重力
-加速度的大小可以表示为：\\
-\null\hspace{3em}$g=\dfrac{8h}{T_A^2 - T_B^2}$ \\
-式中$h$是$B$线与$A$线的高度差。}
+加速度的大小可以表示为：
+\begingroup
+\setlength{\mathindent}{4em}
+\begin{equation*}
+    g=\dfrac{8h}{T_A^2 - T_B^2}
+\end{equation*}
+\endgroup
+式中$h$是$B$线与$A$线的高度差。
 
-\exercise 天体物理常涉及大尺度的\\
+\exercise 天体物理常涉及大尺度的
 问题，为了方便起见，引进一些
-\clearpage
-\noindent 实用的大的长度单位。一个天文单位(AU)等于从地球到太阳的
+实用的大的长度单位。一个天文单位(AU)等于从地球到太阳的
 平均距离；一个秒差距是一个天文单位所张之角为1秒的距离，即
 观测者从某一恒星看地球公转轨道半径所张的角度为1秒时，该恒
 星与太阳之间的距离。试求。
@@ -104,8 +108,7 @@
 \exercise 把两个小物体从同一地点以同样初速率$v_0=24.5$米/秒
 先后竖直上抛，设抛出两物体的时差为$\Delta t=0.500$秒，试问：
 
-\renewcommand{\hsp}{\hspace{0.2em}}
-{(1)\ziju{-0.015}第二个物体抛出后，经过多少时间\hsp $t$\hsp 才与第一个物体相遇？}
+(1)第二个物体抛出后，经过多少时间$t$才与第一个物体相遇？
 
 \vspace{-0.15em}(2)如果$\Delta t\geqslant\dfrac{2v_0}{g}$，讨论结果的物理意义。\vspace{-0.15em}
 
@@ -125,12 +128,12 @@ $\alpha$是多少？2.5秒末夹角$\alpha$又为多少？
 \exercise 高台下降滑雪在一平滑的山坡上进行。山坡与水平线成
 恒定角度$\alpha$，滑雪运动员初速率为$v_0$，并以与水平线成$\theta$的仰角跳
 出(\ref{fig:01.30})。若不考虑空气阻力，试证明：
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig01.30}
   \caption{}
   \label{fig:01.30}
-\end{figurex}
+\end{figure}
 
 (1)运动员落在斜坡上的距离为：
 \begin{equation*}
@@ -169,7 +172,7 @@ $\alpha$是多少？2.5秒末夹角$\alpha$又为多少？
 率相同时，射程是相等的。”试证明他的话，并证明$\theta=\ang{45;;}$时水
 平射程最大。
 
-\begin{wrapfigure}[8]{r}{12.5em}
+\begin{wrapfigure}[8]{r}{13em}
   \vspace{-2.5em}
   \begin{center}
     \includegraphics{figure/fig01.31}
@@ -226,13 +229,13 @@ $\alpha$是多少？2.5秒末夹角$\alpha$又为多少？
 (1)球心的速度与球的角速度的关系是怎样的？
 
 (2)小球面上一点$A$的轨迹如何？
-\begin{figurex}
+\begin{figure}[h]
   %\vspace{-1em}
   \begin{center}
     \includegraphics{figure/fig01.32}
     \caption{}
     \label{fig:01.32}
   \end{center}
-\end{figurex}
+\end{figure}
 
 \end{exercises}
