--- a/tex/body/M02.03-Relativity Of Velocity.tex
+++ b/tex/body/M02.03-Relativity Of Velocity.tex
@@ -12,15 +12,15 @@
   d=ut+d_0
 \end{equation*}
 \vspace{-1.56em}
-\begin{figurex}[!h]
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig02.06}
   \caption{速度的相对性}
   \label{fig:02.06}
-\end{figurex}
+\end{figure}
 
 \noindent 其中$d_0$是时间$t=0$时，坐标原点$O$，$O'$间的距离。故坐标变换
-公式为
+公式为\vspace{-1.5em}
 \begin{equation}
   x'=x-ut-d_0 \label{eqn:02.03.01}
 \end{equation}
@@ -43,14 +43,14 @@
 按照定义，质点相对于$K'$的速度为
 \begin{equation*}
   v\left(t\right) \equiv\frac{\dif x'}{\dif t}=\frac{\dif x}{\dif t}-u
-\end{equation*}\label{err:02.03.01}
-即\vspace{-1.7em}
-\begin{equation}
-  v'=v-u \label{eqn:02.03.02}
-\end{equation}
+\end{equation*}
+\begin{align}
+  \beforetext{即} v'=v-u \label{eqn:02.03.02}
+\end{align}
 式\eqref{eqn:02.03.02}就是同一质点相对于$K$及$K'$二者的速度之间的关系。
 
-\begin{wrapfigure}[10]{r}{14.5em}
+\begin{wrapfigure}[9]{r}{14.5em}
+    \vspace{-0.7em}
   \centering
   \includegraphics{figure/fig02.07}
   \caption{相对作匀速运动的$K$及$K'$}
@@ -69,11 +69,13 @@ $\vec{r'}$表示。它们之间的关系是
 \begin{equation*}
   \vec{d}=\vec{u}t+\vec{d}_0
 \end{equation*}}%
-其中$\vec{d}_0$是时刻$t=0$时，从\\$O$到$O'$的矢量。故有
+其中$\vec{d}_0$是时刻$t=0$时，从$O$到$O'$的矢量。故有
   \begin{equation}
     \vec{r}'=\vec{r}-\vec{u}t-\vec{d}_0 \label{eqn:02.03.03}
   \end{equation}
-  若在$K$系中，质点的轨迹函数是
+若在$K$系中，质点的轨迹函数是
+
+~\vspace{-1.5em}
   \begin{equation*}
     \vec{r}=\vec{r}\left(t\right)
   \end{equation*}
@@ -81,7 +83,7 @@ $\vec{r'}$表示。它们之间的关系是
   \begin{equation}\label{eqn:02.03.04}
     \vec{v}\left(t\right)\equiv\frac{\dif \vec{r}}{\dif t}
   \end{equation}
-  另一方面，由式\eqref{eqn:02.03.03}~可以求出质点在$K'$系中的轨迹函数，它是\vspace{-1em}
+  另一方面，由式\eqref{eqn:02.03.03}~可以求出质点在$K'$系中的轨迹函数，它是
   \begin{equation*}
     \vec{r}'=\vec{r}'\left(t\right)=\vec{r}\left(t\right)-\vec{u}t-\vec{d}_0
   \end{equation*}\label{err:02.03.02}
@@ -89,11 +91,10 @@ $\vec{r'}$表示。它们之间的关系是
   \begin{equation}\label{eqn:02.03.05}
     \vec{v}'\left(t\right)\equiv\frac{\dif \vec{r}'}{\dif t}=\frac{\dif \vec{r}}{\dif t}-\vec{u}
   \end{equation}
-  即\vspace{-2em}
-  \begin{equation}\label{eqn:02.03.06}
-    \vec{v}'=\vec{v}-\vec{u}
-  \end{equation}
-  式\eqref{eqn:02.03.06}~就是三维情况的速度变换公式，又称速度合成公式。可
+  \begin{align}\label{eqn:02.03.06}
+    \beforetext{即} \vec{v}'=\vec{v}-\vec{u}
+  \end{align}
+  式\eqref{eqn:02.03.06}就是三维情况的速度变换公式，又称速度合成公式。可
   见，在不同参考系中，同一运动可能具有不同速度，亦即速度是
   具有相对性的概念。
 
@@ -105,7 +106,7 @@ $\vec{r'}$表示。它们之间的关系是
     \label{fig:02.08}
   \end{wrapfigure}
   \example 一人向东以$v_1=50\text{米/分}$的速度运动，他觉得风从正南
-  方吹来。假若人行速度增至$v_1'=75\text{米/分}$，他觉得风从东南方吹来。
+  方吹来。假若人行速度增至$v_1'=75\text{ 米/分}$，他觉得风从东南方吹来。
   求风的速度$\vec{v}$。
 
   \solution 设两次感觉到的风速为$\vec{v}_2$和$\vec{v}_2'$。根据题意，各个速度应有以下关系：
@@ -116,12 +117,12 @@ $\vec{r'}$表示。它们之间的关系是
   作出矢量图(图\ref{fig:02.08})由式\eqref{xeqn:02.03.01}知$\vec{v}$的末端在$l_1$上，由式\eqref{xeqn:02.03.02}知$\vec{v}$的
   末端在$l_2$上，故$l_1$和$l_2$的交点是$\vec{v}$的末端。显然有：
   \begin{equation*}
-    v_1=v_1'-v_1=76-50=25\text{米/分}
+    v_1=v_1'-v_1=76-50=25\text{ 米/分}
   \end{equation*}
 
   ~\vspace{-1.2em}
   \begin{align*}
-    v      & =\sqrt{v_1^2+v_2^2}=\sqrt{50^2+25^2}=25\sqrt{25}\text{米/分} \\
+    v      & =\sqrt{v_1^2+v_2^2}=\sqrt{50^2+25^2}=25\sqrt{25}\text{ 米/分} \\
     \theta & =\arctg\frac{v_2}{v_1}=\arctg\frac{25}{50}=\ang{26;35;}
   \end{align*}
   从而可看到不同参考系中能感觉到不同的风速。在地球参考系中
@@ -140,9 +141,8 @@ $\vec{r'}$表示。它们之间的关系是
      & \vec{v}=\vec{v}_x+\vec{v}_y=v_x\vec{i}+v_y\vec{j} \\
      & v_x=0,~ v_y=v_2-gt
   \end{align*}
-  所以\vspace{-1em}
   \begin{align*}
-     & \vec{v}=\left(v_2-gt\right)\vec{j} \\
+     \beforetext{所以} & \vec{v}=\left(v_2-gt\right)\vec{j} \\
      & |\vec{v}|=v_2-gt
   \end{align*}
   运动在铅直线上进行，是竖直上抛运动；加速度是重力加速度$g$。
@@ -153,10 +153,9 @@ $\vec{r'}$表示。它们之间的关系是
   \begin{equation*}
     \vec{v}=\vec{v}_x+\vec{v}_y=v_1\vec{i}+\left(v_2-gt\right)\vec{j}
   \end{equation*}
-  故\vspace{-1em}
-  \begin{equation*}
-    |\vec{v}|=v=\sqrt{v_1^2+\left(v_2-gt\right)^2}
-  \end{equation*}
+  \begin{align*}
+    \beforetext{故} |\vec{v}|=v=\sqrt{v_1^2+\left(v_2-gt\right)^2}
+  \end{align*}
   这表示速度的大小、方向都在变。运动方程是
   \begin{equation*}
     \left\{\begin{array}{l}
@@ -207,31 +206,32 @@ $\vec{v}$的夹角为$\mu'$，则光行差为$\alpha$，且有
     \frac{\sin\alpha}{\sin\mu'}=\frac{OO'}{OE'}=\frac{\tau v}{\tau c}=\frac{v}{c}
   \end{equation*}
 
+\clearpage
   \begin{equation*}
     \sin\alpha=\frac{v}{c}\sin\mu'
   \end{equation*}
   因为$\alpha$很小，所以
   \begin{align*}
-    \alpha & \approx\frac{v}{c}\sin\mu'\text{弧度}                                    \\
-           & =\frac{v}{c}\sin\mu'\times\frac{180}{\uppi}\times 60 \times 60 \text{秒} \\
-           & =\frac{v}{c}\sin\mu'\times 206265\text{秒}                               \\
-           & =k\sin\mu'\text{秒}
+    \alpha & \approx\frac{v}{c}\sin\mu'\text{ 弧度}                                    \\
+           & =\frac{v}{c}\sin\mu'\times\frac{180}{\uppi}\times 60 \times 60 \text{ 秒} \\
+           & =\frac{v}{c}\sin\mu'\times 206265\text{ 秒}                               \\
+           & =k\sin\mu'\text{ 秒}
   \end{align*}
   其中$k$称为光行差常数。
 
-  已知地球公转速率为$v=29.770\text{公里/秒}$，光速$c=299,774
-\text{公里/秒}$，所以周年光行差常数
+已知地球公转速率为$v=29.770$公里/秒，光速$c=299,774$
+公里/秒，所以周年光行差常数
   \begin{equation*}
-    k_\text{年}=\frac{29.770}{299,774}\times 206,265=20.48\text{秒}
+    k_\text{年}=\frac{29.770}{299,774}\times 206,265=20.48\text{ 秒}
   \end{equation*}
 
-  已知地球半径$R=6,378\text{公里}$。地球自转一周的时间为$T=
-86,164\text{秒}$。所以在纬度$\varphi$处的地面速度为
+已知地球半径$R=6,378$公里。地球自转一周的时间为$T=
+86,164$秒。所以在纬度$\varphi$处的地面速度为
 \begin{equation*}
-  v_\varphi=\frac{2\uppi R\cos\varphi}{T}=0.464\cos\varphi\text{公里/秒}
+  v_\varphi=\frac{2\uppi R\cos\varphi}{T}=0.464\cos\varphi\text{ 公里/秒}
 \end{equation*}
 因此，周日光行差常数为
 \begin{align*}
-  k_\varphi & =\frac{0.464}{299,774}\times 206,265\times\cos\varphi\text{秒} \\
-            & =0.32\cos\varphi\text{秒}
+  k_\varphi & =\frac{0.464}{299,774}\times 206,265\times\cos\varphi\text{ 秒} \\
+            & =0.32\cos\varphi\text{ 秒}
 \end{align*}
