--- a/tex/body/M02.04-Relativity Of Acceleration.tex
+++ b/tex/body/M02.04-Relativity Of Acceleration.tex
@@ -3,10 +3,11 @@
 根据速度合成公式\eqref{eqn:02.03.06}，如果在时刻$t$，质点对于$K$，$K'$
 的速度分别为$\vec{v}\left(t\right)$及$\vec{v}'\left(t\right)$，而$K'$相对于$K$以$\vec{u}$作匀速运动，
 则有
-\vspace{-1.8em}
 \begin{equation}\label{eqn:02.04.01}
   \vec{v}'\left(t\right)=\vec{v}\left(t\right)-\vec{u}
 \end{equation}
+
+\clearpage\noindent
 根据加速度的定义。质点相对K的加速度是
 \begin{equation}\label{eqn:02.04.02}
   \vec{a}\equiv\frac{\dif \vec{v}}{\dif t}
