--- a/tex/body/M02.08-The Conclusions Of Invariance Of Light Velocity 2 - Length Contraction.tex
+++ b/tex/body/M02.08-The Conclusions Of Invariance Of Light Velocity 2 - Length Contraction.tex
@@ -27,7 +27,7 @@
 \end{equation}
 这尺对于$\mu$子上的观察者在运动，故$ L ' < L  $，即运动的尺变短。
 
-\begin{figurex}[!b]
+\begin{figure}[!b]
   \centering
   \subfigure[静止的雷达钟]{
     \label{fig:02.15a}
@@ -47,18 +47,18 @@
   }
   \caption{}
   \label{fig:02.15}
-\end{figurex}
+\end{figure}
 现在我们来证明式\eqref{eqn:02.08.01}。我们仍使用一个雷达钟。如
-图\ref{fig:02.15a}~所示，当雷达钟与地面相对静止时，从地面参考系，即$K$
+图\ref{fig:02.15a}\\所示，当雷达钟与地面相对静止时，从地面参考系，即$K$
 % 083.jpg
 系来观察，它的天线与反射面之间的距离为$ d$；当雷达钟以速度
-运动时\lhbrak 图\ref{fig:02.15b}\,\rhbrak ，由$K$系测得的距离表示为$d'$。
+运动时\lbr 图\ref{fig:02.15b}\rbr ，由$K$系测得的距离表示为$d'$。
 
 我们考察光信号来回一次的运动。由于光在传播过程中雷达
 在不断地运动，所以，由$K$看来，光传播的距离并不是$d'$。例如，
 当光向右传播，从天线到达反射面时，若所用的时间为$\left(\Delta t\right)_1$，则
 所走过的距离应为$ d ' + u \left( \Delta t \right) _ { 1 }$，其中$ u \left( \Delta t\right) _ { 1 } $一项表示在$\left(\Delta t\right)_1$时
-间中钟向右运动的距离\lhbrak 图\ref{fig:02.15c}\,\rhbrak 。这样，我们有
+间中钟向右运动的距离\lbr 图\ref{fig:02.15c}\rbr 。这样，我们有
 \begin{equation*}
   \left( \Delta t \right) _ { 1 } = \frac { d ' + u \left(\Delta t\right)_1 } { c }
 \end{equation*}
