--- a/tex/body/M03.01-Inertia Law.tex
+++ b/tex/body/M03.01-Inertia Law.tex
@@ -1,5 +1,5 @@
-\section{惯性定律}\label{sec:03.01}
-\vspace{-0.5em}
+\section[惯性定律]{惯~性~定~律}\label{sec:03.01}
+
 在上两章中，讨论了运动的描述，而没有涉及运动的原因，
 没有研究不同式样的运动之间的内在联系。譬如，自由落体为什
 么垂直向下做匀加速运动？行星为什么绕太阳旋转不息？自由落
