--- a/tex/body/M03.02-Newton's Second Law.tex
+++ b/tex/body/M03.02-Newton's Second Law.tex
@@ -1,14 +1,14 @@
 \section{牛顿第二定律}\label{sec:03.02}
 
-{\ziju{-0.01}牛顿第一定律确立了不受力情况下物体的运动性质。本节讨
-  论牛顿第二定律，它确立了外力对物体运动的作用。这个定律是：
-  如果一个质点受到外界物体的作用，则它的运动遵循下列关系：}
+牛顿第一定律确立了不受力情况下物体的运动性质。本节讨
+论牛顿第二定律，它确立了外力对物体运动的作用。这个定律是：
+如果一个质点受到外界物体的作用，则它的运动遵循下列关系：
 \begin{equation}\label{eqn:03.02.01}
   \vec{F} = m \vec{a}
 \end{equation}
-其中\,$\vec{a}$\,是质点的加速度，$m$\,是它的质量；$\vec{F}$\,是外物对它的作用力。
+其中$\vec{a}$是质点的加速度，$m$是它的质量；$\vec{F}$是外物对它的作用力。
 
-{\ziju{-0.01}在此定律中，我们一下子涉及了两个新的物理量：$m$及$\vec{F}$。虽然
+在此定律中，我们一下子涉及了两个新的物理量：$m$及$\vec{F}$。虽然
 在上节讨论过力，但只限于受力或不受力，并没有给出力的定量的
 定义，以及如何从动力学的角度来定义力。另一方面，质量的粗浅
 概念也早就有了，问题同样是：什么是质量？并未解决。也曾有过各
@@ -17,7 +17,7 @@
 “物质的量”然而，这种定义没有物理的价值。因为，什么叫“物质
 的量”？仍然是不确定的。在物理学中，一个物理量的定义，必
 须提供根据其他能够量度的量来计算它的一套规则。根据这个原
-则，在牛顿第二定律的范围中，可以对质量及力作如下的定义：}
+则，在牛顿第二定律的范围中，可以对质量及力作如下的定义：
 
 质量就是质点所受外力与所产生的加速度之比。
 
@@ -36,12 +36,12 @@
 果出发预言另一些新的实验结果，确立从一些实验数据计算出(或
 预言出)另一些实验数据的规则。只要定义、定律确立的联系测
 量数据的规则是明确的、不含糊的，那就没有任何“混乱”可
-言。牛顿第二定律\lhbrak \eqref{eqn:03.02.01}\rhbrak 及质量和力的定义在这种意义上是
+言。牛顿第二定律\lbr \eqref{eqn:03.02.01}\rbr 及质量和力的定义在这种意义上是
 没有任何“混乱”的。
 
-举例说明。如图\ref{fig:03.02}~所示，在一足够光滑的固定桌面上，我
+举例说明。如图\ref{fig:03.02}所示，在一足够光滑的固定桌面上，我们
 
-\begin{figurex}[!h]
+\begin{figure}[!h]
   \centering
   \hfill
   \subfigure[]{
@@ -61,10 +61,10 @@
   \hfill
   \caption{牛顿第二定律的含义}
   \label{fig:03.02}
-\end{figurex}
+\end{figure}
 % 093.jpg
 \clearpage
-\noindent 们做三个实验。其一，物体$ A $与一弹簧相连，把弹簧拉长到$ L $，然后
+\noindent 做三个实验。其一，物体$ A $与一弹簧相连，把弹簧拉长到$ L $，然后
 释放物体$ A $，在弹簧的牵动下，$ A $作加速运动，测量出开始时刻的
 加速度$ a_A $；其二，用上述弹簧与物体$ B $相连，仍拉长到$ L $，测出
 释放时刻的加速度$  a _ { B  } $；  其三，仍是上述弹簧，拉长到$ L $，和捆在
@@ -99,10 +99,10 @@
   a _ { A B } = \frac { F } { m _ { A B } } = \frac { F } { m _ { A } + m _ { B } } = \frac { a _ { A } a _ { B } } { a _ { B } + a _ { A } }
 \end{equation}
 
-{\ziju{-0.005}我们注意到，式\eqref{eqn:03.02.05}中只含有实验直接可测的量(与我们
-任意取定$ m_A $值无关)，亦即牛顿第二定律给出了从一组实验\lhbrak \subref{fig:03.02a}，\subref{fig:03.02b}\rhbrak 的数据计算另一实验\lhbrak \subref{fig:03.02c}\rhbrak 的规则。如果这样计算出来的结果
+我们注意到，式\eqref{eqn:03.02.05}中只含有实验直接可测的量(与我们
+任意取定$ m_A $值无关)，亦即牛顿第二定律给出了从一组实验\lbr \subref{fig:03.02a}，\subref{fig:03.02b}\rbr 的数据计算另一实验\lbr \subref{fig:03.02c}\rbr 的规则。如果这样计算出来的结果
 与观测值符合，就为牛顿第二定律的正确性提供了一个实验验证。
-这样一个理论与实验之间的全面关系告诉我们什么呢？}
+这样一个理论与实验之间的全面关系告诉我们什么呢？
 
 % 094.jpg
 (1) 在整个分析过程中，我们的确有时将式\eqref{eqn:03.02.01}作为定义
@@ -133,14 +133,14 @@
 当补充些什么，或者说用什么模型去看客观世界，这是物理的难
 点，而这也正是物理学工作的精髓。
 
-{\ziju{-0.01} 这样，我们就说明了牛顿第二定律既是动力学基本规律，同
+这样，我们就说明了牛顿第二定律既是动力学基本规律，同
 时又可作为质量及力的定义的全部意义。当然，这并不排斥我们
 去寻求不依赖于牛顿第二定律的关于质量及力的定义。但是，即
 使我们找到了更深入的定义，那么在牛顿第二定律适用的范围内，
 % 095.jpg
 新的定义也必定等价于本节所述的定义。因此，在牛顿第二定律
 适用的范围中，采用上述定义不仅是正确的，而且是“够用”的
-了。}
+了。
 
 按式\eqref{eqn:03.02.01}，力是一个矢量，它的合成、分解遵守矢量代数
 运算法则。质量是一个标量。
@@ -155,8 +155,7 @@
 的标准，国际协议规定$^{12}$C的原子质量精确地等于12个原子质量
 单位。原子质量单位与千克的关系是：
 \begin{equation*}
-  1\text{原子质量单位} = \num{1.6605655e-27}\text{千克}
+  1\text{ 原子质量单位} = \num{1.6605655e-27}\text{ 千克}
 \end{equation*}
-
 力的单位是牛顿，一牛顿力使质量为一千克的物体产生$1\text{米/秒}^2$
 的加速度。
