--- a/tex/body/M03.04-Some Specific Forces.tex
+++ b/tex/body/M03.04-Some Specific Forces.tex
@@ -7,22 +7,23 @@
 中各式各样的运动现象。这里，我们先来简单介绍一些常见的力。
 
 \textsf{1. 弹性力}
-\begin{figurex}[!h]
+\begin{figure}[!h]
   \centering
   \includegraphics{figure/fig03.03}
   \caption{弹性力}
   \label{fig:03.03}
-\end{figurex}
+\end{figure}
 % 097.jpg
 
 一个倔强系数为$ k $的弹簧和物体$ A $相连，弹簧固有长度为$ L _ { 0 } $
-〔图\ref{fig:03.03}(b)〕。在这个位置，弹簧对$ A $不施力，称为平衡位置，取
-其为坐标原点。如果$ A $向右移动〔图\ref{fig:03.03}(a)〕，则弹簧将对物体$ A $施
+\lbr 图\ref{fig:03.03}(b)\rbr 。在这个位置，弹簧对$ A $不施力，称为平衡位置，取
+其为坐标原点。如果$ A $向右移动\lbr 图\ref{fig:03.03}(a)\rbr ，则弹簧将对物体$ A $施
 向左之力，此力的大小为
 \begin{equation}\label{eqn:03.04.01}
   F = - k x
 \end{equation}
-如果将$ A $向左移动〔图\ref{fig:03.03}(c)〕，则弹簧对$ A $施之力就指向右
+
+如果将$ A $向左移动\lbr 图\ref{fig:03.03}(c)\rbr ，则弹簧对$ A $施之力就指向右
 边，而此力为
 \begin{equation*}
   F = - k x
@@ -105,15 +106,15 @@
   \caption{分子力}
   \label{fig:03.07}
 \end{wrapfigure}
-可以完全忽略。由于$  s > t   $，所以斥力的有效作用距离比引力的小力随的变化情况大致如图\ref{fig:03.07}~所示。
+可以完全忽略。由于$  s > t   $，所以斥力的有效作用距离比引力的小力随的变化情况大致如图\ref{fig:03.07}所示。
 
 \textsf{7. 核力}
 
 核力是把原子核中的核子(质子和中子)束缚在一起的力。
-这种力有效作用距离极短，对于大于约\num{1e-13}厘米的距离，核力很
+这种力有效作用距离极短，对于大于约 \num{1e-13} 厘米的距离，核力很
 快就变得很小，可略而不计了。但在小尺度内，它却超过核子之
 间的一切其他形式的相互作占支配地位。这是一种异常复杂
-类型的相互作用，直到大约\num{0.4e-13}厘米，它还是吸引力，大小可表示为
+类型的相互作用，直到大约 \num{0.4e-13} 厘米，它还是吸引力，大小可表示为
 \begin{equation}\label{eqn:03.04.06}
   F = \frac { C } { r ^ { n } } \e ^ { - \frac { r } { r_0 } }
 \end{equation}
