--- a/tex/body/M03.06-Consider Questions.tex
+++ b/tex/body/M03.06-Consider Questions.tex
@@ -2,8 +2,8 @@
 
   \question 分析下述各种情况下物体受到的力以及这些力的反作用
   力(图\ref{fig:03.17})。
-
-  \begin{figurex}
+  \begin{figure}[h]
+      \vspace{-1.5em}
     \centering
     \subfigure[]{\includegraphics{figure/fig03.17a}\label{fig:03.17a}} \hspace{4em}
     \setcounter{subfigure}{2}
@@ -14,7 +14,7 @@
     \subfigure[]{\includegraphics{figure/fig03.17d}}
     \caption{}
     \label{fig:03.17}
-  \end{figurex}
+  \end{figure}
 
   (a) 静止在地面上的木箱；
 
@@ -31,18 +31,20 @@
   % 111.jpg
   静摩擦系数为 $ \mu _ { 0 } $  ，滑动摩擦系数为$ \mu $，斜面倾角为$ \alpha $ 。
 
-  \begin{figurex}
+  \begin{figure}[h]
+    \vspace{-0.5em}
     \centering
     \subfigure[]{\includegraphics{figure/fig03.18a}} \hspace{4em}
     \setcounter{subfigure}{2}
-    \subfigure[]{\includegraphics{figure/fig03.18c}}\\[1em]
+    \subfigure[]{\includegraphics{figure/fig03.18c}}\\
     \setcounter{subfigure}{1}
     \subfigure[]{\includegraphics{figure/fig03.18b}} \hspace{4em}
     \setcounter{subfigure}{3}
     \subfigure[]{\includegraphics{figure/fig03.18d}}
     \caption{}
     \label{fig:03.18}
-  \end{figurex}
+    \vspace{-0.5em}
+  \end{figure}
 
   \begin{wrapfigure}[6]{r}{10em}
     \centering
@@ -63,7 +65,8 @@
   为$ m_A $， $ m _ B $，$ m_C $，分析
   这三块砖所受到的力。
 
-  \begin{wrapfigure}[9]{r}{17em}
+  \begin{wrapfigure}[9]{r}{16em}
+      \vspace{-2em}
     \centering
     \includegraphics{figure/fig03.20}
     \caption{}
