--- a/tex/body/M04.04-Unit System And Dimension.tex
+++ b/tex/body/M04.04-Unit System And Dimension.tex
@@ -11,12 +11,14 @@
 \end{equation*}
 我们称长度、质量及时间三个物理量为基本量，它们的单位为基
 本单位，称其他物理量为导出量，相应的单位为导出单位。
-\begin{tablex}
+\begin{table}[h]
+    \vspace{-0.4em}
   \caption{}
   \label{tab:04.03}
-  \begin{tabularx}{\linewidth}{l|l|l|l}
+  \zihao{-5}
+  \begin{tblr}{colsep=1em,colspec={l|X[3]|X[3]|X[2]}}
     \toprule
-    物理量     & \makecell[c]{单位(SI，MKS)} & \makecell[c]{单位(CGS)}  & \makecell[c]{量\qquad 纲}             \\
+    物理量     & 单位(SI，MKS) & 单位(CGS)  & 量\qquad 纲           \\
     \midrule
     长\quad 度 & 米                          & 厘米                     & $ L $                                 \\
     质\quad 量 & 千克                        & 克                       & $ M $                                 \\
@@ -25,10 +27,11 @@
     加速度     & 米/秒\.$^2$                 & 厘米/秒\.$^2$            & $ L T ^ { - 2 } $                     \\
     角速度     & 弧度/秒                     & 弧度/秒                  & $ T ^ { - 1 } $                       \\
     力         & 牛顿                        & 达因                     & $ M L T ^ { - 2 } $                   \\
-    $G$        & 牛顿·米\.$^2$/千克\.$^2$    & 达因·厘米\.$^2$/克\.$^2$ & $ L ^ { 3 } M ^ { - 1 } T ^ { - 2 } $ \\
+    $G$        & 牛顿$\cdot$米$^2$/千克$^2$    & 达因$\cdot$厘米$^2$/克$^2$ & $ L ^ { 3 } M ^ { - 1 } T ^ { - 2 } $ \\
     \bottomrule
-  \end{tabularx}
-\end{tablex}
+  \end{tblr}
+\vspace{-0.8em}
+\end{table}
 
 基本单位规定之后，整个一系列单位就被规定了。所以一组
 基本单位就决定了一个单位制。我们经常采用的单位制，是长度
@@ -39,12 +42,13 @@
 位，秒为时间单位，称为CGS制。1厘米=1/100米，1克=1/1000千
 克。有了这一组基本单位之间的换算关系，导出单位的换算关系
 也就确定了。例如，在CGS制中速度单位与SI制中速度单位之
-间的关系为\vspace{-0.56em}
+间的关系为
 \begin{equation*}
-  1 \text{厘米/秒} = \frac { 1 } { 1 0 0 } \text{米/秒}
+  1 \text{ 厘米/秒} = \frac { 1 } { 1 0 0 } \text{ 米/秒}
 \end{equation*}
 其他换算关系都可以类似求得。在数值运算中采用的单位制要统
 % 135.jpg
+\clearpage\noindent
 一，不要一个量用这个单位制，另一个量又用那个单位制。
 
 我们把上述讨论更一般化，如果取$ L $为长度“单位”，$ M $为
@@ -77,5 +81,5 @@ $ L / T ^ { 2 } = L T ^ { - 2 } $，每个物理量都对应着一个由$ L , M 
 最后还应指出，可以不取长度、质量及时间三者为基本量，
 而取另外三个量，如长度、时间及力，其他的量也都可以从长度、
 时间及力三者导出，这样也可以规定单位制。这时，相当于由长
-度$ L $、\!时间\,$ T $\,及力\,$ F $\,作为基本的量纲，其他量的量纲都可以用$ L $，
+度$ L $、时间$ T $及力$ F $作为基本的量纲，其他量的量纲都可以用$ L $，
 $ T $及$ F $表示出。选择不同的基本量，同一物理量的量纲就不同。
