--- a/tex/body/M04.05-Several Important Gravitational Physical Quantities.tex
+++ b/tex/body/M04.05-Several Important Gravitational Physical Quantities.tex
@@ -76,6 +76,8 @@ $ v_1 $和$  v _ 2 $的物理意义与前面讨论的相似。当物体的速度
 上述计算表明，如果地球的全部质量能缩小到半径约$ 1 $厘米
 % 138.jpg
 的小球内，那么，生活在这样小球上的人，将无法和外界进行光
+
+\clearpage\noindent
 的或无线电的联系，它将成为一个孤立的体系。这当然只是一个
 设想。下面我们来看一个较实际的例子。
 
@@ -84,11 +86,11 @@ $ v_1 $和$  v _ 2 $的物理意义与前面讨论的相似。当物体的速度
 \begin{equation}\label{eqn:04.05.05}
   M = \frac { 4 \uppi } { 3 } r ^ { 3 } \rho
 \end{equation}
-如果这个体系的半径恰好达到自己的引力半径，则由式\eqref{eqn:04.05.04} 、\eqref{eqn:04.05.05}得到\vspace{-1.5em}
+如果这个体系的半径恰好达到自己的引力半径，则由式\eqref{eqn:04.05.04} 、\eqref{eqn:04.05.05}得到
 \begin{equation*}
   r _ { g } = \frac { 8 \uppi G r _ { g } ^ { 3 } \rho } { 3 c ^ { 2 } }
 \end{equation*}
-亦即引力半径为\vspace{-1.5em}
+亦即引力半径为
 \begin{equation}\label{eqn:04.05.06}
   r _ { g } = \left( \frac { 3 c ^ { 2 } } { 8 \uppi G \rho } \right) ^ { \frac { 1 } { 2 } }
 \end{equation}
