--- a/tex/body/M04.09-Exercises.tex
+++ b/tex/body/M04.09-Exercises.tex
@@ -18,6 +18,7 @@ $ F _ {\text{月}\to\text{日}} $，并比较二者的大小。
 % 151.jpg
 的一个质量为$ M $的质点所受的引力等于多少？方向指向哪里？
 
+\clearpage
 \exercise 有一根质量为$ M $、长为$ 2L $的直线。将坐标系原点取在直
 线的中点，直线为$ y $轴，过中点的垂线取为$ x $轴。
 
@@ -67,12 +68,12 @@ $ M _ 1 $在引力作用下作圆周运动。问：
 空腔，使它的表面与铅球球面相切。在铅球中心与空腔中心的连
 线上，且离铅球中心距离为$ d $处放一个质量为$ m $的小球(图\ref{fig:04.12})。
 试求在这种情况下铅球与小球之间的引力$ \vec{F} $。
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig04.12}
   \caption{}
   \label{fig:04.12}
-\end{figurex}
+\end{figure}
 
 \exercise 有一密度均匀的球壳，外半径为$ a $，内半径为$ b $，总质量为
 $ M $。在离球心$ r $处有一质量为$ m $的质点，$ r $的范围为$  0 \leqslant r \leqslant \infty   $。试
@@ -132,6 +133,7 @@ $ M $。在离球心$ r $处有一质量为$ m $的质点，$ r $的范围为$  
 落地时的速度$ v $。
 % 154.jpg
 
+\clearpage
 (2)一物体在地球轨道上，设只受太阳引力，由静止开始自
 由落向太阳，不计阻力，求落到太阳表面所需的时间和到达太阳
 表面时的速度。
