--- a/tex/body/M05.01-The Copernican Principle.tex
+++ b/tex/body/M05.01-The Copernican Principle.tex
@@ -43,11 +43,10 @@
 本节一开始提出的问题，同时又不与宇宙不存在中心这一观念相
 矛盾。因此，我们的讨论首先就必须坚持以下的出发点：
 
-\begin{minipage}{\linewidth - 2em}
-  \fangsong\setlength\parindent{2em}
+\begin{quoting}
   在宇宙中没有特殊的位置，每一个观察者看到的现象都
   是一样的。
-\end{minipage}
+\end{quoting}
 
 这个陈述常被称为哥白尼原理。所谓“没有特殊位置”，意
 即没有中心，所谓“每个观察者看到的都一样”，意即宇宙间各
