--- a/tex/body/M05.02-Cosmic Density Distribution.tex
+++ b/tex/body/M05.02-Cosmic Density Distribution.tex
@@ -23,11 +23,11 @@
 布写为$  \rho ' \left( \vec{r} ' , t \right)   , \vec{r} ' $是相对于$ O' $的位置矢量。
 
 由哥白尼原理，$ O $及$ O' $看到的密度分布应相同，即相对于$ O' $位
-置矢量为$ \vec{r} ' $处的密度应等于相对于$ O $位置矢量为$ \vec{r} = \vec{r} ' $处的密度，
-即\vspace{-1.56em}
-\begin{equation}\label{eqn:05.02.01}
+置矢量为$ \vec{r} ' $处的密度应等于相对于$ O $位置矢量为$ \vec{r} = \vec{r} ' $处
+的密度，即\vspace{-1.5em}
+\begin{align}\label{eqn:05.02.01}
   \rho ' \left( \vec{r} ' , t \right) = \rho \left( \vec{r} ' , t \right)
-\end{equation}
+\end{align}
 
 另外，若分别由$ O $及$ O ' $观察同一点$ P $，其密度值当然应是一样
 的，因为一个点只能有一个密度，故
@@ -43,7 +43,7 @@
   \rho \left( \vec{r} - \vec{c} , t \right) = \rho \left( \vec{r} , t \right)
 \end{equation}
 由于$ O $与$ O' $是可任意选的，即$ \vec{c} $取任何值上式都应成立。这样，
-结论是\vspace{-1.2em}
+结论是\vspace{-1.5em}
 \begin{equation}\label{eqn:05.02.05}
   \rho \left( 0 , t \right) = \rho \left( \vec{r} , t \right)
 \end{equation}
