--- a/tex/body/M05.04-Oberst Paradox And Cosmic Expansion.tex
+++ b/tex/body/M05.04-Oberst Paradox And Cosmic Expansion.tex
@@ -2,14 +2,15 @@
 
 上节求得的速度分布解，哪一种符合实际情况？我们可以用
 所谓奥伯斯(Olbers)佯谬来判定。
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig05.02}
   \caption{星体射向地球的光子}
   \label{fig:05.02}
-\end{figurex}
+  \vspace{-0.8em}
+\end{figure}
 
-奥伯斯佯谬讨论星体发射的光子到达地球的数目。如图\ref{fig:05.02}~，
+奥伯斯佯谬讨论星体发射的光子到达地球的数目。如图\ref{fig:05.02}，
 假定一颗星离地球的距离为$ r $，这颗星每单位时间向四面八方均
 匀地发射$ E $个光子。那么，单位时间里落到地球上的光子数应当
 等于
@@ -18,7 +19,7 @@
 \end{equation}
 其中$ R $是地球的半径。
 
-\begin{wrapfigure}[8]{r}{14em}
+\begin{wrapfigure}[8]{r}{14.5em}
   \centering
   \vspace{-2.5em}
   \includegraphics{figure/fig05.03}
@@ -93,7 +94,7 @@
 \end{equation*}
 的天体，其光子速度变为负值，亦即这种光子的速度并不是向着
 地球，而是背向地球，故这种光子永远不能到达地球。这时，式
-\eqref{eqn:05.04.03}中的积分限应改成从0到$  c / | f \left( t \right) |   $，积分可成为有限。所
+\eqref{eqn:05.04.03}中的积分限应改成从0到$  c / \left| f \left( t \right) \right| $，积分可成为有限。所
 以，膨胀解可以解决奥伯断佯谬。
 
 总之，从哥白尼原理出发，在牛顿力学的框架内，我们证明
