--- a/tex/body/M05.05-Cosmic Expansion Dynamics.tex
+++ b/tex/body/M05.05-Cosmic Expansion Dynamics.tex
@@ -5,6 +5,7 @@
 
 由于膨胀是均匀的，我们只要研究一些典型天体的运动，就
 % 162.jpg
+\clearpage\noindent
 可以得知膨胀运动的全貌。我们选一个以$ O $为心的球壳上的星体，
 这组星体相对于$ O $不断地膨胀，但始终保持球壳的形状。
 
@@ -50,8 +51,8 @@
 \end{equation*}
 
 % 163.jpg
-\clearpage
-\noindent 或 \vspace{-1.56em}
+\clearpage\noindent
+或
 \begin{equation}\label{eqn:05.05.04}
   \frac { \dif ^ { 2 } R } { \dif t ^ { 2 } } = - \frac { 4 \uppi G } { 3 } R \rho
 \end{equation}
@@ -61,7 +62,7 @@
 \begin{equation*}
   \rho R ^ { 3 } = \text{常数}
 \end{equation*}
-或\vspace{-1.56em}
+或
 \begin{equation}\label{eqn:05.05.05}
   \rho R ^ { 3 } = \rho _ 0 { R _ 0} ^ { 3 }
 \end{equation}
@@ -78,17 +79,17 @@
      & = \frac { 4 \uppi G } { 3 } \rho _ { 0 } R _ 0 ^ { 3 } \frac { \dif } { \dif t } \left( \frac { 1 } { R } \right)
   \end{aligned}
 \end{equation*}
-则可得到\vspace{-0.8em}
+则可得到
 \begin{equation*}
   \frac { \dif } { \dif t } \left[ \frac { 1 } { 2 } \left( - \frac { \dif R } { \dif t } \right) ^ { 2 } - \frac { 4 \uppi G } { 3 } \rho _ { 0 } P _ { 0 } ^ { 3 } \frac { 1 } { R } \right] = 0
 \end{equation*}
-积分后得到\vspace{-0.8em}
+积分后得到
 \begin{equation}\label{eqn:05.05.07}
   \left[ \frac { 1 } { R _ { 0 } } \left( \frac { \dif R } { \dif t } \right) \right] ^ { 2 } - \frac { 8 \uppi G } { 3 } \rho _ 0 \frac { 1 } {\left( \dfrac { R } { R _ { 0 } }\right)} = K
 \end{equation}
 其中$ K $表示积分常数，我们分以下两种花况讨论式\eqref{eqn:05.05.07}。
 
-(1)$ K > 0 $时，由式\eqref{eqn:05.05.07}得到
+(1) $ K > 0 $时，由式\eqref{eqn:05.05.07}得到
 \begin{equation}\label{eqn:05.05.08}
   \frac { \dif R } { \dif t } = \pm \sqrt { \frac { 8 \uppi G } { 3 } \rho _ { 0 } R _ { 0 } ^ { 3 } \frac { 1 } { R } + K R _ 0 ^ { 2 } }
 \end{equation}
@@ -98,7 +99,7 @@
 胀状态，则无论$ R $膨胀到多大，总有$ \dfrac { \dif R } { \dif t } > 0 $，即总处在膨
 胀状态。这称为无限膨胀解。
 
-(2)$ K < 0 $时，代替式\eqref{eqn:05.05.08}，则有
+(2) $ K < 0 $时，代替式\eqref{eqn:05.05.08}，则有
 \begin{equation}\label{eqn:05.05.09}
   \frac { \dif R } { \dif t } = \pm \sqrt { \frac { 8 \uppi G } { 3 } \rho _ { 0 } R _ { 0 } ^ { 3 } \frac { 1 } { R } - | K | R _ 0 ^ { 2 } }
 \end{equation}
