--- a/tex/body/M06.00-Conservation of Energy.tex
+++ b/tex/body/M06.00-Conservation of Energy.tex
@@ -1,4 +1,4 @@
-\chapter[能量守恒]{能~量~守~恒}\label{chp:06}
+\chapter[能量守恒]{能~~量~~守~~恒}\label{chp:06}
 
 \input{body/M06.01-Conservation Of Mechanical Energy}
 \input{body/M06.02-Work}
