--- a/tex/body/M06.01-Conservation Of Mechanical Energy.tex
+++ b/tex/body/M06.01-Conservation Of Mechanical Energy.tex
@@ -1,7 +1,7 @@
 \section{机械能守恒}\label{sec:06.01}
 
 在自然界里，有许多机械运动具有重复性。例如，围绕太阳
-\begin{wrapfigure}[10]{r}{15em}
+\begin{wrapfigure}[10]{r}{16em}
   \centering
   \includegraphics{figure/fig06.01}\vspace{1em}
   \caption{乒乓球的周而复始地上下运动}
@@ -12,7 +12,7 @@
 及速度也在时刻变化着，但总的来看，它的运动也是周
 而复始地重复。从高后处自由落下一个乒乓球，如果球
 台的弹性是理想的，则乒乓球会在$ h _ { 0 } $与球台之间弹跳不
-止，周而复始地上下运动(图61)。这类的实例，还可举出不少。
+止，周而复始地上下运动(图\ref{fig:06.01})。这类的实例，还可举出不少。
 它们的共同特点是，在时刻变化的运动状态中，有某种不变的因
 素。虽然这些运动能用前面学过的概念加以分析，但我们希望直
 接找出描写这种不变性质的物理量。
@@ -56,17 +56,17 @@
 或守恒。图6.2上的三条线，分别是乒乓球的动能、重力
 势能及它们的总和与高度$ z $的关系。$ z $越大则重力势能
 越大，而动能越小；$ z $小时，则相反。我们可以解释为：
-在下落过程中，质点的重力
+在下落过程中，质点的重力势
 % 168.jpg
 \clearpage
-\begin{wrapfigure}[10]{r}{15em}
+\begin{wrapfigure}[10]{r}{17em}
   \vspace{1em}
   \centering
   \includegraphics{figure/fig06.03}\vspace{1em}
   \caption{物体在重力作用中的守恒量}
   \label{fig:06.03}
 \end{wrapfigure}
-\noindent 势能渐渐转化为它的动能，而在上弹过程中，
+\noindent 能渐渐转化为它的动能，而在上弹过程中，
 质点的动能渐渐转化为它的重力势能，这两种
 形式的能可以相互转化，但总量不变。
 
