--- a/tex/body/M06.03-Gravitational Potential Energy.tex
+++ b/tex/body/M06.03-Gravitational Potential Energy.tex
@@ -3,14 +3,14 @@
 在\ref{sec:06.01}节，我们曾指出，地面附近的质点具有重力势能$ mgz $，
 现在更一般地讨论万有引力势能。
 
-\begin{wrapfigure}[9]{r}{13em}
+\begin{wrapfigure}[10]{r}{13em}
   \vspace{-2em}
   \centering
   \includegraphics{figure/fig06.06}
   \caption{引力作的功}
   \label{fig:06.06}
 \end{wrapfigure}
-如图\ref{fig:06.06}\;所示，物体$ M $对质点$ m $的万有引力在二者连线方
+如图\ref{fig:06.06}所示，物体$ M $对质点$ m $的万有引力在二者连线方
 向，大小为%\vspace{-0.4em}
 \begin{equation*}
   F = G \frac { m M } { r ^ { 2 } }
@@ -67,12 +67,13 @@ $ a $到$ b $，引力作功相等。因为在从$ a $到$ c $和从$ c $到$ d 
 所以在沿$ s _ { 3 } $由$ a $到$ c $再到$ d $，引力作功为零。因此，沿$ s _ { 1 } $或$ s _ { 3 } $由
 $ a $到$ b $，引力作功仍然相同。
 
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig06.08}
   \caption{引力作功与路径无关}
   \label{fig:06.08}
-\end{figurex}
+  \vspace{-0.8em}
+\end{figure}
 
 这样，我们证明了万有引力作功与路径无关的基本性质。因
 此，由$ a $到$ b $，引力作功可写为
@@ -93,7 +94,7 @@ $ a $到$ b $，引力作功仍然相同。
 \begin{equation*}
   \frac { G m M } { r _ { b } } - \frac { G m M } { r _ { a } } = T _ { b } - T _ { a }
 \end{equation*}
-或\vspace{-1.56em}
+或
 \begin{equation}\label{eqn:06.03.03}
   \begin{aligned}
       & T _ { a } + \left( - \frac { G m M } { r _ { a } } \right)                 \\
@@ -126,6 +127,7 @@ $ a $到$ b $，引力作功仍然相同。
 幅图，我们可以很方便地讨论许多问题。
 
 我们知道，质点在引力作用下运动时的总能量$ E $是常数，即
+
 % 177.jpg
 \begin{equation*}
   E = \frac { 1 } { 2 } m v ^ { 2 } - \frac { G m M } { r } = \text{不变量}
@@ -142,13 +144,13 @@ $ a $到$ b $，引力作功仍然相同。
   \caption{引力势能}
   \label{fig:06.09}
 \end{wrapfigure}
-从图6.9中容易看出，当$ E < 0 $时，质点只能在
+从图\ref{fig:06.09}中容易看出，当$ E < 0 $时，质点只能在
 $ r = 0 $到$ r = r _ { \max } $之间运动，这种运动称为束缚
 运动。当$ E \geqslant 0 $，$ E $线在横轴以上，它不与$ V_\text{引} $
 线相交。所以质点可以在$ r = 0 $到$ \infty $的整个范围
 里运动。这种运动称为自由运动。
 
-由图\ref{fig:06.09}\;不难求出
+由图\ref{fig:06.09}不难求出
 第二宇宙速度，即从地球发射的人造行星所需要的最低速度。人
 造行星是逃离地球引力作用的东西，也就是说它对地球引力已成
 为自由运动。因此，在这种情况总机械能$ E $至少为零，所以在发
@@ -180,12 +182,13 @@ $ r = 0 $到$ r = r _ { \max } $之间运动，这种运动称为束缚
 非常窄的范围内，还必须把飞行轨道控制在一个非常小的空间区
 域里，才能到达月球。
 
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig06.10}
   \caption{地-月系统势能图}
   \label{fig:06.10}
-\end{figurex}
+  \vspace{-0.8em}
+\end{figure}
 
 最后应当指出，引力势能实际上是属于$ m $及$ M $二者组成的体
 系的，因势能决定于二者之间的相对距离。其他的势能也有同样
