--- a/tex/body/M06.04-Conservative Force.tex
+++ b/tex/body/M06.04-Conservative Force.tex
@@ -20,12 +20,12 @@
 如果有摩擦力，情况就完全不同。我们来讨论图6.11的固定
 斜面，设各面的摩擦系数均为$ \mu $。若质点沿$ 1 \to 2 $自由下落，则质点
 只受重力作用，重力作功为
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig06.11}
   \caption{有摩擦力情况的作功}
   \label{fig:06.11}
-\end{figurex}
+\end{figure}
 % 180.jpg
 \clearpage\mbox{}\vspace{-1em}
 \begin{equation*}
@@ -114,13 +114,10 @@
 % 182.jpg
 \clearpage
 反过来，如果一个体系的运动遵守式\eqref{eqn:06.04.01}，即
-\begin{equation*}
-  T _ { a } + V _ { a } = T _ { b } + V _ { b }
-\end{equation*}
-则有\vspace{-1.56em}
-\begin{equation*}
-  T _ { b } - T _ { a } = V _ { a } - V _ { b }
-\end{equation*}
+\begin{align*}
+  &T _ { a } + V _ { a } = T _ { b } + V _ { b } \\
+  \beforetext{则有} &T _ { b } - T _ { a } = V _ { a } - V _ { b }
+\end{align*}
 再由功的定义
 \begin{equation*}
   A _ { a \to b } = T _ { b } - T _ { a }
