--- a/tex/body/M06.06-Consider Questions.tex
+++ b/tex/body/M06.06-Consider Questions.tex
@@ -50,13 +50,13 @@
   链质量为$ m $，长为$ l $，要作多少功？
 
   \question 在高为的固定斜面顶上，一质量为$ m $的小物体由静止开
-  \vspace{1.56em}
-  \begin{figurex}
+  \begin{figure}[h]
     \centering
     \includegraphics{figure/fig06.14}
     \caption{}
     \label{fig:06.14}
-  \end{figurex}
+    \vspace{-0.8em}
+  \end{figure}
   % 190.jpg
   \clearpage\noindent
   始下滑。求物体滑到斜面底时的速度大小若斜面是凹的或凸的
