--- a/tex/body/M07.02-Vibration Solution.tex
+++ b/tex/body/M07.02-Vibration Solution.tex
@@ -9,7 +9,7 @@
 \begin{equation*}
   m \frac { \dif ^ { 2 } x } { \dif t ^ { 2 } } = - k x
 \end{equation*}
-或者\vspace{-1.56em}
+或者
 \begin{equation}\label{eqn:07.02.01}
   \frac { \dif ^ { 2 } x } { \dif t ^ { 2 } } + \frac { k } { m } x = 0
 \end{equation}
@@ -27,15 +27,14 @@
 \end{equation}
 其中$ A $，$ \varphi _ { 0 } $是两个任意常数。图\ref{fig:07.05}\;画出了上式的$ x \mathdash t $关系，它清楚
 地显示周期运动的特征。这种周期运动叫做简谐振动。
-
-\begin{figurex}
+\begin{figure}[h]
   \vspace{1em}
   \centering
   \includegraphics{figure/fig07.05}
   \caption{简谐振动}
   \label{fig:07.05}
-  \vspace{1em}
-\end{figurex}
+  %\vspace{1em}
+\end{figure}
 
 现在我们来说明式\eqref{eqn:07.02.04}中各量的物理意义。
 
@@ -53,11 +52,11 @@
 \begin{equation*}
   x _ { \max } = \sqrt { \frac { 2 E } { k } }
 \end{equation*}
-所以\vspace{-1.56em}
+所以%\vspace{-1.56em}
 \begin{equation*}
   A = \sqrt { \frac { 2 E } { k } }
 \end{equation*}
-或者\vspace{-1.56em}
+或者%\vspace{-1.56em}
 \begin{equation}\label{eqn:07.02.05}
   E = \frac { k } { 2 } A ^ { 2 }
 \end{equation}
@@ -130,6 +129,7 @@ $ \omega $称为圆频率，它和频率$ \nu $相差一个因子$ 2 \uppi $。
   \end{cases}
 \end{equation*}
 % 205.jpg
+\clearpage\noindent
 势能等于总能量，$  E = V   $，故动能为零，即速度为零。相反，当速
 度达到极值，即动能达到极大时，动能等于总能，势能为零，故
 $ x = 0   $。
