--- a/tex/body/M07.03-Geometric Expression Of Simple Harmonic Vibration.tex
+++ b/tex/body/M07.03-Geometric Expression Of Simple Harmonic Vibration.tex
@@ -9,12 +9,12 @@
 \end{equation}
 式中$ \varphi _ { 0 } $是$  t = 0   $时刻的角位置。
 
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig07.06}
   \caption{圆周运动与简谐振动}
   \label{fig:07.06}
-\end{figurex}
+\end{figure}
 
 如果我们用$ \left(x, y\right) $坐标来描写质点的位置则有
 \begin{equation}\label{eqn:07.03.02}
