--- a/tex/body/M07.04-Damped Vibration And Q Value.tex
+++ b/tex/body/M07.04-Damped Vibration And Q Value.tex
@@ -10,7 +10,7 @@
 
 能量或振幅随时间衰减的振动过程称为阻尼振动。
 
-图\ref{fig:07.08}\;给出了在阻尼振动过程中，位置$ x $和时间$ t $的典型关系。
+图\ref{fig:07.08}给出了在阻尼振动过程中，位置$ x $和时间$ t $的典型关系。
 在阻尼振动过程中，振幅由大变小，最后成为零，即振动停止。
 
 为了描写阻力的影响，我们需要引进新的物理量。
@@ -18,13 +18,13 @@
 
 
 % 207.jpg
-\begin{figurex}[t]
+\begin{figure}[t]
   \centering
   \includegraphics{figure/fig07.08}
 
   \caption{阻尼振动}
   \label{fig:07.08}
-\end{figurex}
+\end{figure}
 
 
 由于阻力的存在，质点每完成一周期的振动，它的总能量$ E $中就有一部分消耗于克服阻力，用$ \left( \Delta E \right) _ { T } $表示示这个值。显然，
@@ -48,7 +48,9 @@ Q值与时间无关，是个常数。
 现在我们讨论$ Q $为常数的阻尼振动的特征。我们知道，能量
 % 208.jpg
 对时间的微商$ \dif E / \dif t $代表单位时间内能量的增量。对于阻尼振动，
-必定有$ \dif E / \dif t < 0 $，所以在一周期中能量的减少$ \left( \Delta E \right) _ { T } $应当是\vspace{-1.56em}
+
+\clearpage\noindent
+必定有$ \dif E / \dif t < 0 $，所以在一周期中能量的减少$ \left( \Delta E \right) _ { T } $应当是
 \begin{equation*}
   \left( \Delta E \right) _ { T } = - \frac { \dif E } { \dif t } T
 \end{equation*}
@@ -112,7 +114,7 @@ $ - \Delta A $就是在一个周期的时间里，振子损失的能量。即
 \begin{equation*}
   m \frac { \dif ^ { 2 } x } { \dif t ^ { 2 } } = - k x - \eta \frac { \dif x } { \dif t }
 \end{equation*}
-或\vspace{-1.56em}
+或
 \begin{equation*}
   \frac { \dif ^ { 2 } x } { \dif t ^ { 2 } } + \frac { \eta } { m } \cdot \frac { \dif x } { \dif t } + \frac { k } { m } x = 0
 \end{equation*}
@@ -129,7 +131,6 @@ $ - \Delta A $就是在一个周期的时间里，振子损失的能量。即
 % 210.jpg
 式域的。式\eqref{eqn:07.04.09}的$ x \mathdash t  $曲线，即有图78的形式。另外应注意
 到，阻力不仅对振幅有影响，而且也影响到周期。当$  \beta = 0   $时，振
-， \beta
 动周期为$ T = \dfrac { 2 \uppi } { \omega _ { 0 } }  $；$  \beta \ne 0   $有阻力时，周期变为
 $ T = \dfrac { 2 \uppi } { \sqrt { \omega _ { 0 } ^ { 2 } - \beta ^ { 2 } } } $
 即阻力的存在使周期变长。若阻力很大$ \beta \to \omega _ { 0 } $，则周期$ T \to \infty $。这
