--- a/tex/body/M07.06-Simple Harmonic Vibration Synthesis.tex
+++ b/tex/body/M07.06-Simple Harmonic Vibration Synthesis.tex
@@ -7,13 +7,12 @@
 谓音色，就是决定于振动的形式。譬如，小提琴的振动有如图
 \ref{fig:07.10}\;所示的锯齿形。各种乐器都有自己的独特振动形式。
 
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig07.10}
   \caption{小提琴的振动}
   \label{fig:07.10}
-\end{figurex}
-\vspace{0.5em}
+\end{figure}
 
 这种情况，似乎要求我们把振动按其形式分为多种类型来建
 立理论。其实不然，因为各种周期振动都可以由简谐振动组成。
@@ -29,7 +28,7 @@
     f \left( t \right) = & A _ { 0 } + A _ { 1 } \cos \left( \omega t + \varphi _ { 1 } \right) + A _ { 2 } \cos \left( 2 \omega t + \varphi _ { 2 } \right) \\
                          & + A _ { 3 } \cos \left( 3 \omega t + \varphi _ { 3 } \right) + \cdots
   \end{aligned}
-\end{equation}}
+\end{equation}}%
 其中$\omega = \dfrac { 2 \uppi } { T } $；$ A _ { 0 }, A _ { 1 }, A _ { 2 }, \dots $决定于$ f \left( t \right) $的具体形式。式\eqref{eqn:07.06.01}
 及式\eqref{eqn:07.06.02}表示，任何一个周期为$ T $的振动，可以看成是由周期
 为$ T, \dfrac { 1 } { 2 } T , \dfrac { 1 } { 3 } T  , \dots $一系列简谐振动相加而成的。例如上述小
@@ -56,14 +55,14 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 利用三角公式，可以将上式改写成
 \begin{equation}\label{eqn:07.06.04}
   \begin{aligned}
-    x = & \left( A _ { 1 } \cos \varphi _ { 1 } + A _ { 2 } \cos \varphi _ { 2 } \right) \cos \omega t   \\[-0.5em]
+    x = & \left( A _ { 1 } \cos \varphi _ { 1 } + A _ { 2 } \cos \varphi _ { 2 } \right) \cos \omega t   \\
         & - \left( A _ { 1 } \sin \varphi _ { 1 } + A _ { 2 } \sin \varphi _ { 2 } \right) \sin \omega t
   \end{aligned}
 \end{equation}
-令\vspace{-1.56em}
+令
 \begin{equation}\label{eqn:07.06.05}
   \begin{aligned}
-    A _ { 1 } \cos \varphi _ { 1 } + A _ { 2 } \cos \varphi _ { 2 }  & = A  \cos \varphi \\[-0.5em]
+    A _ { 1 } \cos \varphi _ { 1 } + A _ { 2 } \cos \varphi _ { 2 }  & = A  \cos \varphi \\
     A _ { 1 } \sin \varphi _ { 1 } + A _ { 2 }  \sin \varphi _ { 2 } & = A  \sin \varphi
   \end{aligned}
 \end{equation}
@@ -79,7 +78,7 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
   \end{split}
 \end{equation}
 式\eqref{eqn:07.06.06}表示，两个相同周期(或频率)的简谐振动合成的结果
-\begin{wrapfigure}[7]{r}{13em}
+\begin{wrapfigure}[6]{r}{13em}
   \vspace{-1em}
   \centering
   \includegraphics{figure/fig07.11}
@@ -92,7 +91,7 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 式\eqref{eqn:07.06.07}也很容易由几何方法得到。按\ref{sec:07.03}节的方法，每个简谐振动可用一
 矢量表示，则式\eqref{eqn:07.06.03}应由
 % 216.jpg
-图\ref{fig:07.11}\;中的矢量$ \vec{OA_1} $及$ \vec{OA_2} $表示。由于$ \vec{ O A _ { 1 } } , \vec{ O A _ { 2 } } $绕$ O $转动的角速
+图\ref{fig:07.11}中的矢量$ \vec{OA_1} $及$ \vec{OA_2} $表示。由于$ \vec{ O A _ { 1 } } , \vec{ O A _ { 2 } } $绕$ O $转动的角速
 度(即$ \omega $)相同，所以二者相对位相不变，因此二者在$ OX $方向的
 投影之和，就等于矢量$\vec{OA}$的投影。$ \vec{OA} $为$\vec{OA_1}$及$\vec{OA_2}$的矢量和。
 由$  A _ { 1 }   ,  A _ { 2 }  ,\varphi_{ 1 },\varphi_{ 2 }$可求出$ A $及$\varphi$，结果仍然是式\eqref{eqn:07.06.07}。
@@ -162,17 +161,16 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 \begin{equation*}
   r = \sqrt { x ^ { 2 } + y ^ { 2 } }
 \end{equation*}
-则\vspace{-1.56em}
-\begin{equation*}
-  r = \sqrt { 2 } r _ { 0 }  \cos \left( \omega t +  \varphi _ { 1 } \right)
-\end{equation*}
+\begin{align*}
+  \beforetext{则} r = \sqrt { 2 } r _ { 0 }  \cos \left( \omega t +  \varphi _ { 1 } \right)
+\end{align*}
 故质点是沿着图712(a)的斜线方向作简谐振动。
 
 为了讨论一般情况，我们可以从式\eqref{eqn:07.06.10}得出
 \begin{equation}\label{eqn:07.06.11}
   \begin{split}
     x + y &= r _ { 0 }  \cos \left( \omega t + \varphi _ { 1 } \right) + r _ { 0 }  \cos \left( \omega t +  \varphi _ { 2 } \right)  \\[-0.5em]
-    &= A _ { + }  \cos \left( \omega t + \varphi \right) \\[-0.5em]
+    &= A _ { + }  \cos \left( \omega t + \varphi \right) \\
     x - y &= r _ { 0 }  \cos \left( \omega t +  \varphi _ { 1 } \right) - r _ { 0 }  \cos \left( \omega t +  \varphi _ { 2 } \right)  \\[-0.5em]
     &= A _ { - }  \sin \left( \omega t + \varphi \right)
   \end{split}
@@ -180,8 +178,8 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 其中\vspace{-1.56em}
 \begin{equation}\label{eqn:07.06.12}
   \begin{split}
-    A _ { + } &= \sqrt { 2 } r _ { 0 } \sqrt { 1 + \cos \left( \varphi _ { 1 } -  \varphi _ { 2 } \right) }  \\[-0.5em]
-    A _ { - } &= \sqrt { 2 } r _ { 0 } \sqrt { 1 - \cos \left( \varphi _ { 1 } -  \varphi _ { 2 } \right) } \\[-0.5em]
+    A _ { + } &= \sqrt { 2 } r _ { 0 } \sqrt { 1 + \cos \left( \varphi _ { 1 } -  \varphi _ { 2 } \right) }  \\
+    A _ { - } &= \sqrt { 2 } r _ { 0 } \sqrt { 1 - \cos \left( \varphi _ { 1 } -  \varphi _ { 2 } \right) } \\
     \tg \varphi &= \frac { \sin \varphi _ { 1 } + \sin \varphi _ { 2 } } { \cos \varphi _ { 1 } + \cos \varphi _ { 2 } }
   \end{split}
 \end{equation}
@@ -193,9 +191,9 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 可见，式\eqref{eqn:07.06.10}表示的运动轨迹，一般情况是一个椭圆。椭圆
 的长轴或短轴沿着$ \pm 45 ^ { \circ } $线，两轴长分别为$ A _ { + } $及$ A _ { - } $。由此，不难
 从位相差$ \varphi_{ 2 } - \varphi_{ 1 } $给出一系列不同的运动形态(图\ref{fig:07.12})。\vspace{1.56em}
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig07.12}
   \caption{二维振动的合成}
   \label{fig:07.12}
-\end{figurex}
+\end{figure}
