--- a/tex/body/M07.07-Consider Questions.tex
+++ b/tex/body/M07.07-Consider Questions.tex
@@ -9,12 +9,12 @@
 
   \question 在图\ref{fig:07.13}\;所示的诸情况中，哪些是简谐振动？哪些不是简
   谐振动？试说明理由。
-  \begin{figurex}
+  \begin{figure}[h]
     \centering
     \includegraphics{figure/fig07.13}
     \caption{}
     \label{fig:07.13}
-  \end{figurex}
+  \end{figure}
 
   (1)织布机的梭子置于光滑水平经线上，在两边冲力作用下
   作往返运动；
@@ -49,12 +49,12 @@
 
   \question 两个倔强系数都为$ k $的轻弹簧与一重物$ m $组成以下各种振
   力系统，试问：哪些是简谐振动？如是，则求其周期(图\ref{fig:07.14})。
-  \begin{figurex}
+  \begin{figure}[h]
     \centering
     \includegraphics{figure/fig07.14}
     \caption{}
     \label{fig:07.14}
-  \end{figurex}
+  \end{figure}
 
   % 221.jpg
   \clearpage
