--- a/tex/body/M08.02-Impulse.tex
+++ b/tex/body/M08.02-Impulse.tex
@@ -39,12 +39,12 @@ $ \displaystyle \int _ { t _ { 1 } } ^ { t _ { 2 } } \vec{F} \dif t $
 顾及力的具体性质。
 
 % TODO: \usepackage{graphicx} required
-\begin{figurex}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig08.04}
   \caption{飞船的运动}
   \label{fig:08.04}
-\end{figurex}
+\end{figure}
 
 如图\ref{fig:08.04}所示，在$ t $时刻，飞船的质量为$  M \left( t \right) = M + \Delta m $，速
 度为$ v $；在$ t + \Delta t $时刻，喷出质量$ \Delta m $，飞船质量变为$ M \left( t + \Delta t \right) = M $，
@@ -57,7 +57,7 @@ $ \displaystyle \int _ { t _ { 1 } } ^ { t _ { 2 } } \vec{F} \dif t $
     = & \Delta m \left( v - w \right) + M \left( v - \Delta v \right)
   \end{split}
 \end{equation*}
-整理后得\vspace{-1.56em}
+整理后得
 \begin{equation}\label{eqn:08.02.03}
   \Delta m w = M \Delta v
 \end{equation}
