--- a/tex/body/M08.03-Collision.tex
+++ b/tex/body/M08.03-Collision.tex
@@ -115,7 +115,7 @@ $ \vec { v } _ { 1 } $为斜边的直角三角形
 (图\ref{fig:08.06})，因而$ \vec { v } ' _ { 1 } $和$ \vec { v } ' _ { 2 } $必定互相垂直，即在碰撞后，两粒子的运动
 方向一定是相互垂直的。由此，我们得到一个非常有用的图形，
 称为散射圆(图\ref{fig:08.07})。圆的直径是$ v _ { 1 } $，由于$ \vec { v } ' _ { 1 } \perp \vec { v } ' _ 2 $，所以，直角
-\begin{figurex}
+\begin{figure}[h]
   \begin{minipage}[b]{0.5\linewidth}
     \centering
     \includegraphics{figure/fig08.06}
@@ -128,7 +128,7 @@ $ \vec { v } _ { 1 } $为斜边的直角三角形
     \caption{散射圆}
     \label{fig:08.07}
   \end{minipage}
-\end{figurex}
+\end{figure}
 三角形的顶端一定在圆周上。这样，如果测得了入射粒子碰撞后
 的运动方向，从图上可以立即求得靶中被撞出的粒子的速度的大
 小和方向。
