--- a/tex/body/M08.04-Center Of Mass Theorem.tex
+++ b/tex/body/M08.04-Center Of Mass Theorem.tex
@@ -29,10 +29,9 @@
 \begin{equation*}
   \left( m _ { 1 } + m _ { 2 } \right) \frac { \dif ^ { 2 } \vec { r } _ { c } } { \dif t ^ { 2 } } = 0
 \end{equation*}
-即\vspace{-0.5em}
-\begin{equation}\label{eqn:08.04.03}
-  \frac { \dif ^ { 2 } \vec { r } _ { c } } { \dif t ^ { 2 } } = 0
-\end{equation}
+\begin{align}\label{eqn:08.04.03}
+  \beforetext{即} \frac { \dif ^ { 2 } \vec { r } _ { c } } { \dif t ^ { 2 } } = 0
+\end{align}
 式\eqref{eqn:08.04.03}表明，对孤立体系，其质心的加速度为零，即$ C $点的加
 
 % 240.jpg
@@ -60,7 +59,7 @@ $ m _ { 1 } , m _ { 2 } , \cdots , m _ { n } $
   \vec { r } _ { c } = \frac { m _ { 1 } \vec { r } _ { 1 } + m _ { 2 } \vec { r } _ { 2 } + \cdots + m _ { n } \vec { r } _ { n } } { m _ { 1 } + m _ { 2 } + \cdots + m _ { n } }
 \end{equation}
 其中$ \vec { r } _ { 1 } , \vec { r } _ { 2 } , \cdots , \vec { r } _ { n }$分别为各质点的位置。
-这时，动量守恒定律可写为
+这时，动量守恒定律可写为\vspace{-0.4em}
 \begin{equation}\label{eqn:08.04.05}
   \frac { \dif ^ { 2 } \vec { r } _ { c } } { \dif t ^ { 2 } } = 0
 \end{equation}
@@ -70,11 +69,9 @@ $ m _ { 1 } , m _ { 2 } , \cdots , m _ { n } $
 \begin{equation*}
   \begin{split}
     \vec { v } _ { c } & = \frac { \dif \vec { r } _ { c } } { \dif t }  \\
-    & = \frac { 1 } { \sum \limits _ { i = 1 } ^ { n } m _ { i } } \left( m _ { 1 } \frac { \dif \vec { r } _ { 1 } } { \dif t } + m _ { 2 } \frac { \dif \vec { r } _ { 2 } } { \dif t } + \cdots + m _ { n } \frac { \dif \vec { r } _ { n } } { \dif t } \right)
-  \end{split}
-\end{equation*}
-\begin{equation*}
-  = \frac { 1 } { \sum \limits _ { i = 1 } ^ { n } m _ { i } } \left( m _ { 1 } \vec { v } _ { 1 } + m _ { 2 } \vec { v } _ { 2 } + \cdots + m _ { n } \vec { v } _ { n } \right)
+    & = \frac { 1 } { \sum \limits _ { i = 1 } ^ { n } m _ { i } } \left( m _ { 1 } \frac { \dif \vec { r } _ { 1 } } { \dif t } + m _ { 2 } \frac { \dif \vec { r } _ { 2 } } { \dif t } + \cdots + m _ { n } \frac { \dif \vec { r } _ { n } } { \dif t } \right) \\
+  &= \frac { 1 } { \sum \limits _ { i = 1 } ^ { n } m _ { i } } \left( m _ { 1 } \vec { v } _ { 1 } + m _ { 2 } \vec { v } _ { 2 } + \cdots + m _ { n } \vec { v } _ { n } \right)
+\end{split}
 \end{equation*}
 质心的加速度为
 \begin{equation}\label{eqn:08.04.06}
@@ -91,7 +88,7 @@ $ m _ { 1 } , m _ { 2 } , \cdots , m _ { n } $
 \begin{equation*}
   \frac { \dif \vec { r } _ { c } } { \dif t } = \frac { 1 } { \sum \limits _ { i = 1 } ^ { n } m _ { i } } \left( \vec { F } _ { 1 \text {外} } + \vec { F } _ { 2 \text {外} } + \cdots + \vec { F } _ { n \text {外} } \right)
 \end{equation*}
-或\vspace{-1.56em}
+或
 \begin{equation}\label{eqn:08.04.07}
   M _ { \text {总} } \frac { \dif \vec { v } _ { c } } { \dif t } = \vec { F } _ { \text {外} }
 \end{equation}
@@ -118,7 +115,7 @@ $ \vec { F } _ { 1 \text {外} } + \vec { F } _ { 2 \text {外} } + \cdots + \ve
 作用就行了。
 
 应当再强调一点，在式\eqref{eqn:08.04.07}中，总质量
-$ M _ { \text {总} } $是各质点质量之和，即\vspace{-1.56em}
+$ M _ { \text {总} } $是各质点质量之和，即
 \begin{equation}\label{eqn:08.04.08}
   M _ { \text {总} } = m _ { 1 } + m _ { 2 } + \cdots + m _ { n }
 \end{equation}
