--- a/tex/body/M09.01-Conservation of Angular Momentum.tex
+++ b/tex/body/M09.01-Conservation of Angular Momentum.tex
@@ -38,7 +38,7 @@
      & = m _ { 1 } \frac { \dif } { \dif t } ( \vec{r} _ { 1 } \times \vec{v} _ { 1 } )
   \end{aligned}
 \end{equation*}
-所以\vspace{-1.5em}
+所以
 \begin{equation}\label{eqn:09.01.04}
   m _{ 1 } \frac { \dif }{\dif t } ( \vec{r} _ { 1 } \times \vec{v} _ { 1 } ) = \vec{r} _ { 1 } \times \vec{F} _ { 2 \to 1 }
 \end{equation}
@@ -73,7 +73,7 @@
 \begin{equation*}
   \frac { \dif \vec{L} } { \dif t } = 0
 \end{equation*}
-或\vspace{-1.5em}
+或
 \begin{equation}\label{eqn:09.01.09}
   \vec{L}=\text{不变量}
 \end{equation}
@@ -82,7 +82,6 @@
 % 256.jpg
 律，即
 角动量守恒律。同样，我们可以定义
-
 \begin{equation}\label{eqn:09.01.10}
   \vec{l} = \vec{r} \times m \vec{v}
 \end{equation}
@@ -94,7 +93,7 @@
 \begin{equation*}
   \frac { \dif \vec{L} } { \dif t } = 0
 \end{equation*}
-或\vspace{-1.56em}
+或%\vspace{-1.56em}
 \begin{equation}\label{eqn:09.01.11}
   \vec{L}=\text{不变量}
 \end{equation}
@@ -105,9 +104,9 @@
 是一个矢量关系，它包括三个不变的量，即
 \begin{equation}\label{eqn:09.01.12}
   \begin{aligned}
-    L _ { x } = \text{变量} \\
-    L _ { y } = \text{变量} \\
-    L _ { z } = \text{变量}
+    L _ { x } = \text{不变量} \\
+    L _ { y } = \text{不变量} \\
+    L _ { z } = \text{不变量}
   \end{aligned}
 \end{equation}
 再则，与动量守恒定律一样，在证明角动量守恒时，我们使用了
