--- a/tex/body/M09.03-Lung-Lenz vector.tex
+++ b/tex/body/M09.03-Lung-Lenz vector.tex
@@ -116,14 +116,13 @@
 \begin{equation*}
   \vec{r} \cdot \vec{B} = r B \cos \varphi
 \end{equation*}
-其中$ \varphi $为$ \vec{r} $与$ \vec{B} $之间的夹角。用这个表达式，则式\eqref{eqn:09.03.12}可变成\vspace{-1.2em}
+其中$ \varphi $为$ \vec{r} $与$ \vec{B} $之间的夹角。用这个表达式，则式\eqref{eqn:09.03.12}可变成
 \begin{equation*}
   \frac { 1 } { m } \vec{l} ^ { 2 } = r B \cos \varphi + G M m r
 \end{equation*}
-或者\vspace{-1.2em}
-\begin{equation}\label{eqn:09.03.13}
-  r = \frac { \vec{l} / G M m ^ 2 } { 1 + \dfrac { B } { G M m } \cos \varphi }
-\end{equation}
+\begin{align}\label{eqn:09.03.13}
+  \beforetext{或者} r = \frac { \vec{l} / G M m ^ 2 } { 1 + \dfrac { B } { G M m } \cos \varphi }
+\end{align}
 \begin{wrapfigure}[11]{r}{17em}
   \centering
   \includegraphics{figure/fig09.07}
@@ -244,14 +243,10 @@ $ O $为焦点的圆锥曲线的
 \begin{equation*}
   \frac { G M m } { R _ 0 ^ { 2 } } = m \frac { v _ 0 ^ { 2 } } { R _ { 0 } }
 \end{equation*}
-即\vspace{-1.56em}
-\begin{equation*}
-  G M m = m v _ 0 ^ { 2 } R _ { 0 } = C
-\end{equation*}
-故\vspace{-1.56em}
-\begin{equation*}
-  | F | = \frac { m v _ 0 ^ { 2 } R _ { 0 } } { r ^ { 2 } }
-\end{equation*}
+\begin{align*}
+  \beforetext{即} &G M m = m v _ 0 ^ { 2 } R _ { 0 } = C \\
+  \beforetext{故} &| F | = \frac { m v _ 0 ^ { 2 } R _ { 0 } } { r ^ { 2 } }
+\end{align*}
 式中$ r $是在此引力场内某点与力心的距离。
 
 (2)火箭点燃，角动量不变
@@ -292,14 +287,14 @@ $ O $为焦点的圆锥曲线的
   \end{split}
 \end{equation*}
 当$ v _ { r } = \dfrac { 1 } { 2 } v _ { 0 } $时，轨道方程为
-\begin{figurex}
+\vspace{-0.5em}
+\begin{figure}[h]
   \centering
   \includegraphics{figure/fig09.08}
   \caption{}
   \label{fig:09.08}
-\end{figurex}
+\end{figure}
 % 270.jpg
-
 \begin{equation*}
   r = \frac { R _ { 0 } } { 1 + \dfrac { 1 } { 2 } \cos \varphi }
 \end{equation*}
@@ -313,7 +308,7 @@ $ O $为焦点的圆锥曲线的
     &= \frac { 2 R _ { 0 } } { 1 - \left( \dfrac { v _ { r } } { v _ { 0 } } \right) ^ { 2 }}
   \end{split}
 \end{equation*}
-对于\vspace{-0.6em}
+对于
 \begin{align*}
   v _ { r } & = \frac { 1 } { 2 } v _ { 0 } \\
   a         & = \frac { 4 } { 3 } R _ { 0 }
@@ -350,10 +345,10 @@ $ O $为焦点的圆锥曲线的
 (1)写出椭圆的轨道方程。为了使飞船进入这个轨道，飞船在$ A $
 点的速率必须增为多少？
 
-(2)从A到B的航行，要多少时间？
+(2)从$ A $到$ B $的航行，要多少时间？
 
 
-(3)求飞船在C点的速度沿椭圆长轴的速度分量$ v _ \bot $和$ \dot{ r } $。
+(3)求飞船在$ C $点的速度沿椭圆长轴的速度分量$ v _ \bot $和$ \dot{ r } $。
 
 \solution (1)由圆轨道，有
 \begin{equation*}
@@ -418,7 +413,7 @@ $ O $为焦点的圆锥曲线的
 \begin{equation*}
   \frac { T _ { 2 } } { T _ { 1 } } = \Bigg( \frac { A _ 2 ^ { \prime } } { A _ { 1 } } \Bigg) \Bigg( \frac { l _ { 1 } } { l _ { 2 } } \Bigg) \Bigg( \frac { m } { m } \Bigg)
 \end{equation*}
-已知\vspace{-1.56em}
+已知%\vspace{-1.56em}
 \begin{equation*}
   \begin{split}
     T _ { 1 } &= \frac { 2 \uppi R _ { 0 } } { v _ { 0 } }  \\
@@ -455,7 +450,7 @@ $ O $为焦点的圆锥曲线的
     l ^ { \prime } &= m \sqrt { \frac { 3 } { 2 } } v _ { 0 } R _ { 0 } \\
     &= m v _ { \bot } \left( \frac { 3 } { 2 } R _ { 0 } \right) \\
     E ^ { \prime } &= - \frac { 1 } { 4 } m v _ 0 ^ { 2 } \\
-    &= \frac { 1 } { 2 } m \dot { r } ^ { 2 } + \frac { 1 } { 2 } m v _ { \bot } ^ { 2 } - \frac { C } { \dfrac { 3 } { 3 } R _ { 0 } } \\
+    &= \frac { 1 } { 2 } m \dot { r } ^ { 2 } + \frac { 1 } { 2 } m v _ { \bot } ^ { 2 } - \frac { C } { \dfrac { 3 } { 2 } R _ { 0 } } \\
     &= \frac { 1 } { 2 } m \dot { r } ^ { 2 } + \frac { 1 } { 2 } m v _ { \bot } ^ { 2 } - \frac { m v _ 0 ^ 2 R _ 0 } { \dfrac { 3 } { 2 } R _ { 0 } }
   \end{split}
 \end{equation*}
