--- a/tex/body/M09.04-Moment of Inertiar.tex
+++ b/tex/body/M09.04-Moment of Inertiar.tex
@@ -6,10 +6,10 @@
 \end{equation}
 如果质点在一个平面内运动，取此平面内某一点$ O $为原点(如图
 \ref{fig:09.10}所示)，则$ \vec{ r } $，$ \vec{ p } $总是在此平面内，由定义知，总是垂直于此
-平面的，故$ \vec{M} $也只能总是垂直于此平面，否则的方向将变化，运
+平面的，故$ \vec{M} $也只能总是垂直于此平面，否则的方向将变化，运动
 % 275.jpg
 \clearpage\noindent
-动就不可能是平面的。因此，在平面运动的情况\lhbrak  式\eqref{eqn:09.04.01}\rhbrak 可
+就不可能是平面的。因此，在平面运动的情况\lhbrak  式\eqref{eqn:09.04.01}\rhbrak 可
 写为标量形式
 \begin{equation}\label{eqn:09.04.02}
   \frac { \dif l } { \dif t } = M
@@ -79,7 +79,7 @@ $ m $是惯性的度量，在同样力$ F $的
 用类似的方法，可以把上述结果推广到多质点所构成的体
 系，即有$ n $个质点都绕$ O $作圆周运动，则有
 \begin{equation}\label{eqn:09.04.07}
-    \sumx _ { i = 1 } ^ { n } m _ i r _ i ^ { 2 } \dfrac { \dif \omega _ { i } } { \dif t } = M _ { \text { 外 } }
+    \sum _ { i = 1 } ^ { n } m _ i r _ i ^ { 2 } \dfrac { \dif \omega _ { i } } { \dif t } = M _ { \text { 外 } }
 \end{equation}
 \begin{wrapfigure}[8]{r}{11em}
     \centering
@@ -103,13 +103,13 @@ $ m $是惯性的度量，在同样力$ F $的
 我们把体系中各质点角速质不相等的情况，称为较差转动体系
 反之，称为刚性转动体系。对于较差转动，式\eqref{eqn:09.04.07}没有多少
 用处，因为在一个方程中含有$ n $个变量，无法求解。要想求解，仍
-必须回到$ n $个方程去。但对刚性转动，由式\eqref{eqn:09.04.08}可将式\eqref{eqn:09.04.07}简化为\vspace{-1.56em}
+必须回到$ n $个方程去。但对刚性转动，由式\eqref{eqn:09.04.08}可将式\eqref{eqn:09.04.07}简化为
 \begin{equation*}
-     \Big( \sumx _ { i = 1 } ^ { n } m _ i r _ i ^ { 2 } \Big) \dfrac { \dif \omega } { \dif t } = M _ { \text { 外 } }
+     \Big( \sum _ { i = 1 } ^ { n } m _ i r _ i ^ { 2 } \Big) \dfrac { \dif \omega } { \dif t } = M _ { \text { 外 } }
 \end{equation*}
 与式\eqref{eqn:09.04.03}对比，我们定义
 \begin{equation}\label{eqn:09.04.09}
-    I = \sumx _ { i = 1 } ^ { n } m _ i r _ i ^ { 2 }
+    I = \sum _ { i = 1 } ^ { n } m _ i r _ i ^ { 2 }
 \end{equation}
 称为刚性转动体系的对某一选定的转轴的转动惯量。这样，上述
 方程就改写为
@@ -137,12 +137,12 @@ $ m $是惯性的度量，在同样力$ F $的
 这个体积元中的质量为
 
 % 278.jpg
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/fig09.13}
     \caption{求地球的转动惯量}
     \label{fig:09.13}
-\end{figurex}
+\end{figure}
 \begin{equation*}
     \begin{split}
         \dif m &= \rho \dif V \\
