--- a/tex/body/M09.05-Kinetic Energy of Rotation.tex
+++ b/tex/body/M09.05-Kinetic Energy of Rotation.tex
@@ -29,7 +29,7 @@
  I \omega = \text{不变量}
 \end{equation}
 这个守恒律并不是新的，式\eqref{eqn:09.05.03}就是角动量守恒律在绕轴的
-平面运动特殊情况下的表示。由于$ l $是可以变化的，所以我们可
+平面运动特殊情况下的表示。由于$ I $是可以变化的，所以我们可
 以用改变$ I $的办法来改变转动速率$ \omega $。当$ I $大时$ \omega $小；当$ I $小时$ \omega $大。
 % 280.jpg
 
