--- a/tex/body/M09.07-Exercises.tex
+++ b/tex/body/M09.07-Exercises.tex
@@ -1,22 +1,22 @@
 \begin{exercises}
 
 \exercise 分别对质心$ C $及对任一固定点$ O $写出下述两个体系的角动
-量$ \vec{ L } _ C $及$ \vec{ L } _ O $。
+量$ \vec{ L } _ c $及$ \vec{ L } _ o $。
 
 (1)质量为$ m $的两个小球，用轻的细棍连接，棍长为$ 2 l $，以角
 速度$ \omega $绕$ C $旋转，$ O $点与$ C $相距为$ r $。
 
-(2)细圆环质量为$ m $，以角速度$ \omega $围绕$ C $旋转，环半径为 $ R $；$ O $ 
+(2)细圆环质量为$ m $，以角速度$ \omega $围绕$ C $旋转，环半径为 $ R $；$ O $
 点与$ C $相距为$ r $。
 
 \exercise 有一质点组，质心为C点，O为某一固定点，如图914所
 示。求证
 \begin{equation*}
-    \vec{ L } _ { O }  = \vec { L } _ { C } + \vec { r } _ { C } \times \vec { p } _ { C }  
+    \vec{ L } _ { o }  = \vec { L } _ { c } + \vec { r } _ { c } \times \vec { p } _ { c }
 \end{equation*}
-其中，$ \vec{ L } _ { O } $为质点组对$ O $的角动量；$ \vec{ L } _ { C } $为质点组对质心$ C $的角动
-量；$ \vec { r } _ { C } $为质心对$ O $的矢径，$ \vec { p } _ { C } $为质心对$ O $的动量。
-\begin{figurex}
+其中，$ \vec{ L } _ { o } $为质点组对$ O $的角动量；$ \vec{ L } _ { c } $为质点组对质心$ C $的角动
+量；$ \vec { r } _ { c } $为质心对$ O $的矢径，$ \vec { p } _ { c } $为质心对$ O $的动量。
+\begin{figure}[h]
     \begin{minipage}[b]{0.5\linewidth}
         \centering
         \includegraphics{figure/fig09.14}
@@ -29,7 +29,7 @@
         \caption{}
         \label{fig:09.15}
     \end{minipage}
-\end{figurex}
+\end{figure}
 % 282.jpg
 
 \clearpage
@@ -102,12 +102,12 @@ $ \cos \alpha $)，$ \alpha $为火箭点火时飞船速度方向与飞船逃逸
 $ \dfrac { 2 } { 3 } \uppi  $
 年。
 
-\exercise 已知地球半径$  R = 6 . 4 \times 1 0 ^ { 3 }  $ 公里，密度为$  \rho = 5 . 5   $克/厘米$ ^ 3 $，
+\exercise 已知地球半径$  R = 6 . 4 \times 1 0 ^ { 3 }  $ 公里，密度为$  \rho = 5 . 5   $克/厘米\textsuperscript{3}，
 若地球为规则的球形，求地球自转的角动量。
 
 \exercise 在静止的、均匀的、质量为$ M $、半径为$ R _ 1 $的水平大圆盘
 上，站着一个质量为$ m $的人，圆盘可以无擦地绕通过圆盘中心
-的竖直轴转动。当这个人开始顺着与圆盘周心、半径为$  R _ { 2 }  $($  R _ { 2 } < 
+的竖直轴转动。当这个人开始顺着与圆盘周心、半径为$  R _ { 2 }  $($  R _ { 2 } <
 R _ { 1 }  $)的圆周等速率地走动时，若他相对于圆盘的速度为$ v $，问圆盘
 将以多大的角速度$ \omega $旋转？
 
@@ -125,12 +125,12 @@ R _ { 1 }  $)的圆周等速率地走动时，若他相对于圆盘的速度为$
 
 (2)设碰撞是完全非弹性的，问小球与板共同的角速度$ \omega $为多
 少？
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/fig09.17}
     \caption{}
     \label{fig:09.17}
-\end{figurex}
+\end{figure}
 
 \exercise 由于月一地之间有潮汐力，月亮会不断升高。当月一地相
 距大致为多远时，月亮将会飞掉，不再随着地球公转了？
