--- a/tex/body/M10.06-Cosider Question.tex
+++ b/tex/body/M10.06-Cosider Question.tex
@@ -11,13 +11,12 @@
 哪个最小？
 
 \vspace{1.5em}
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/fig10.24}
     \caption{}
     \label{fig:10.24}
-\end{figurex}
-\vspace{1.5em}
+\end{figure}
 
 \question 本章\ref{sec:10.02} 节中指出，为了描写刚体的一般运动，可将运动
 分解为随某选定的基点$ O $的平动加绕$ O $的转动，平动的距离及速
