--- a/tex/body/M10.07-Exercises.tex
+++ b/tex/body/M10.07-Exercises.tex
@@ -75,7 +75,7 @@ $ r $的圆形，则转动惯量$ I $又为多少？
 % 313.jpg
 下落。设绳不可伸长，滑轮与轴之间无摩擦。求$ m $达到地面时的
 速度$ v $。
-\begin{figurex}
+\begin{figure}[h]
     \begin{minipage}[b]{0.4\linewidth}
         \centering
         \includegraphics{figure/fig10.26}
@@ -88,7 +88,7 @@ $ r $的圆形，则转动惯量$ I $又为多少？
         \caption{}
         \label{fig:10.27}
     \end{minipage}
-\end{figurex}
+\end{figure}
 
 \exercise 如图\ref{fig:10.27} 中所示，质量为$  m _ { 1 }   $的物体以细绳绕过定滑轮
 拉质量为$  m _ { 2 }   $的物体运动。滑轮半径为$ R $，质量为$ M $，其质量集中在
@@ -139,7 +139,7 @@ $ 20 $级的梯子，以$ 60^\circ $的倾角架在
 长不变，绳子质量不计。分别求出$ M $下降的加速度$ a $和各段绳中
 的张力$  T _ { 1 } , T _ { 2 } , T _ { 3 } $。
 
-\begin{figurex}
+\begin{figure}[h]
     \begin{minipage}[b]{0.4\linewidth}
         \centering
         \includegraphics{figure/fig10.30}
@@ -152,7 +152,7 @@ $ 20 $级的梯子，以$ 60^\circ $的倾角架在
         \caption{}
         \label{fig:10.31}
     \end{minipage}
-\end{figurex}
+\end{figure}
 
 \exercise 一质量为$  M = 1 0   $公斤、半径为$  R = 2 0  $ 厘米的圆柱体，用绳
 子系住它的轴，此绳跨过一质量为$  m _ { 1 } = 2 . 0   $公斤、半径为 $ r = 1 0   $厘
@@ -226,7 +226,7 @@ $ v _ { c }   $及球滚动的角速度。
 么条件下，球会在向左行进的某时，同时停止又停转？再在什么
 条件下，球会变为向右的纯滚动？
 
-\begin{figurex}
+\begin{figure}[h]
     \begin{minipage}{0.4\linewidth}
         \centering
         \includegraphics{figure/fig10.33}
@@ -239,7 +239,7 @@ $ v _ { c }   $及球滚动的角速度。
         \caption{}
         \label{fig:10.34}
     \end{minipage}
-\end{figurex}
+\end{figure}
 
 \exercise 一圆柱体从倾角为$ \alpha $的固定斜面上自由下落(图\ref{fig:10.34}) ，
 斜面的摩擦系数至少应为多大，才会使圆柱体无滑动地纯滚动下
