--- a/tex/body/M11.01-Pragmatic Inertial Reference Frame.tex
+++ b/tex/body/M11.01-Pragmatic Inertial Reference Frame.tex
@@ -23,6 +23,7 @@
 物体间的相互作用力有一个共同的特点，它们之间的距离越
 % 318.jpg
 大时，作用力越小。我们用手臂的肌肉对其他物体施力时，手臂
+\clearpage\noindent
 必须接触该物体；反之，如果手臂与物体不相接触，尽管力气再
 大，该物体也不改变运动的状态。物体之间的万有引力，不要相
 互接触也会有作用，但是万有引力的大小与物体间的距离平方成
