--- a/tex/body/M11.02-Principle of Relativity.tex
+++ b/tex/body/M11.02-Principle of Relativity.tex
@@ -14,11 +14,11 @@
 宙的中心，它是绝对静止的。在哥白尼体系中，中心不是地球，
 而是太阳，地球围绕太阳转。这还是绝对空间、绝对静止观念。
 地心说与日心说之间的争论问题之一是，若地球绕太阳转，其绝
-对速度如此之快，为什么我们感觉不到？这是从力学观点上对哥
+对速度如此之快，为什么我们感觉不到？这是从力学观点上对哥白
 
 % 320.jpg
 \clearpage\noindent
-白尼学说的非常大的非难。
+尼学说的非常大的非难。
 
 伽利略对上述问题给了一个彻底的回答，他说：
 
@@ -46,10 +46,10 @@
 比游向水碗后部来得大；它们一样悠闲地游向放在水碗
 边缘任何地方的食饵。最后，蝴蝶和苍蝇继续随便地到
 处飞行，它们也决不会向船尾集中，并不因为它们可能
-长时间留在空中，脱离开了船的运动，为赶
+长时间留在空中，脱离开了船的运动，为赶上船的运动
 % 321.jpg
 \clearpage\noindent
-上船的运动而显出累的样子。”\sbfootnote{类似伽利略哪种原始形式的相对性原理思想，中国古代也曾有过。在公元前
+而显出累的样子。”\sbfootnote{类似伽利略哪种原始形式的相对性原理思想，中国古代也曾有过。在公元前
 一世纪成书的《尚书纬·考灵曜》中写着：“地恒动不止，而人不知，如人在大舟
 中，闭窗而坐，舟行而人不觉也。”当然，这种原始的思想，在当时不可能形成完
 整的科学体系。}
