--- a/tex/body/M11.04-Lorentz Transform.tex
+++ b/tex/body/M11.04-Lorentz Transform.tex
@@ -12,12 +12,12 @@
     x ^ { 2 } + y ^ { 2 } + z ^ { 2 } - c ^ { 2 } t ^ { 2 } = 0
 \end{equation*}
 
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/fig11.01}
     \caption{$ K $及$ K' $两个参考系}
     \label{fig:11.01}
-\end{figurex}
+\end{figure}
 由于光速不变，在$ K' $中，这个光讯号的波前应是以$ K' $的原点为
 % 325.jpg
 心的球面，即
@@ -75,12 +75,10 @@
 \end{equation*}
 
 % 326.jpg
-\noindent
-亦即\vspace{-1.56em}
-\begin{equation*}
-    \sh \theta = \frac { \beta } { \sqrt { 1 - \beta ^ { 2 } } }  \qquad
+\begin{align*}
+    \beforetext{亦即} \sh \theta = \frac { \beta } { \sqrt { 1 - \beta ^ { 2 } } }  \qquad
 \ch \theta = \frac { 1 } { \sqrt { 1 - \beta ^ { 2 } } }
-\end{equation*}
+\end{align*}
 式\eqref{eqn:11.04.05}还可以改写成
 \begin{equation}\label{eqn:11.04.06}
     \begin{split}
@@ -104,11 +102,10 @@ t &= \frac { t ^ { \prime } + \beta \dfrac { x ^ \prime } { c } } { \sqrt { 1 - 
 \begin{equation*}
     \dif x = \frac { \beta c  \dif t ^ { \prime } } { \sqrt { 1 - \beta ^ { 2 } }} \quad \dif y = 0 \quad \dif z = 0 \quad \dif t = \frac {  \dif t ^ { \prime } } { \sqrt { 1 - \beta ^ { 2 } } }
 \end{equation*}
-故\vspace{-1.56em}
-\begin{equation*}
-        \frac {  \dif x } {  \dif t } = \frac { \beta c \sqrt { 1 - \beta ^ { 2 } } } { \sqrt { 1 - \beta ^ { 2 } } } = \beta c \quad \frac {  \dif y } {  \dif t } = \frac {  \dif z } {  \dif t } = 0
-\end{equation*}
-所以得到\vspace{-1.56em}
+\begin{align*}
+        \beforetext{故}\frac {  \dif x } {  \dif t } = \frac { \beta c \sqrt { 1 - \beta ^ { 2 } } } { \sqrt { 1 - \beta ^ { 2 } } } = \beta c \quad \frac {  \dif y } {  \dif t } = \frac {  \dif z } {  \dif t } = 0
+\end{align*}
+所以得到
 \begin{equation}\label{eqn:11.04.08}
     \beta c = v \quad \beta = \frac v c
 \end{equation}
@@ -142,6 +139,7 @@ $ \beta ^ { 2 } = \left( \dfrac { v } { c } \right) ^ { 2 }  $
 高速情况它不正确。
 
 在伽利略变换中，时间与空间是相互分开的，变换$ t ^ { \prime } = t + t _ { 0 }  $
-中只含有$ K $及$ K ' $中的时间坐标。这正符合我们按日常经验所建立
+中只含有$ K $及$ K ' $中的时间坐标。这正符合我们按日常经验所建
+立
 起来的观念：时间与空间是“绝对”分开的两个概念。但是，在
 洛伦兹变换\lhbrak 式\eqref{eqn:11.04.09}\rhbrak 中，时间的变换不再与空间无关。
