--- a/tex/body/M11.05-Space-Time Idea of Relativity.tex
+++ b/tex/body/M11.05-Space-Time Idea of Relativity.tex
@@ -12,8 +12,8 @@
 同的时间。例如，一个对$ K' $静止的时钟，其长针相继两次指向
 处，就构成了这样两个事件：
 \begin{align*}
-    A \left( x ^ { \prime } , y ^ { \prime } , z ^ { \prime } ， t _ { 1 } ^ { \prime } \right) \\
-    B \left( x ^ { \prime } , y ^ { \prime } , z ^ { \prime } ， t _ { 2 } ^ { \prime } \right)
+    A \left( x ^ { \prime } , y ^ { \prime } , z ^ { \prime } , t _ { 1 } ^ { \prime } \right) \\
+    B \left( x ^ { \prime } , y ^ { \prime } , z ^ { \prime } , t _ { 2 } ^ { \prime } \right)
 \end{align*}
 按照式\eqref{eqn:11.04.10}，对于$ K $，这两个事件分别发生在下列时刻：
 \begin{align*}
@@ -28,6 +28,7 @@
 $ K ' $中观察者的测量结果；换言之，对$ K ' $静止的时钟，从$ K $中的
 观察者看来，是走慢了。反之，同样可以证明对$ K $静止的时钟，
 从$ K ' $中的观察者看来，是走慢了。总之，相对于观察者运动的
+\clearpage\noindent
 % 329.jpg
 钟，总比相对他静止的钟走得慢。这就是第二章中用雷达钟所分
 析得到的结论。
@@ -87,27 +88,25 @@ $ \Delta t $可能为正，也可能为负，这取决于$ x_{1}^{\prime}-x_{2}^
 \textsf{4. 时序与因果关系}
 
 不仅同时是相对的，而且事件发生的时间次序也是相对的。
-设事件$ A $及$ B $对$ K ' $来说，发生的地点与时间分别是$ \left( x _ 1 ^ { \prime } ， t _ 1 ^ { \prime } \right) $及
-$ \left( x _ 2 ^ { \prime } ， t _ 2 ^ { \prime } \right)  $，则对于$ K $，事件$ A $及$ B $发生的时间是
+设事件$ A $及$ B $对$ K ' $来说，发生的地点与时间分别是$ \left( x _ 1 ^ { \prime } , t _ 1 ^ { \prime } \right) $及
+$ \left( x _ 2 ^ { \prime } , t _ 2 ^ { \prime } \right)  $，则对于$ K $，事件$ A $及$ B $发生的时间是
 \begin{equation*}
     t_{1}=\frac{t_{1}^{\prime}+\dfrac{v}{c^{2}} x_{1}^{\prime}}{\sqrt{1-\dfrac{v^{2}}{c^{2}}}}
     \qquad
     t_{2}=\frac{t_{2}^{\prime}+\dfrac{v}{c^{2}} x_{2}^{\prime}}{\sqrt{1-\dfrac{v^{2}}{c^{2}}}}
 \end{equation*}
-故\vspace{-1.56em}
-\begin{equation*}
-    t_{1}-t_{2}=\frac{t_{1}^{\prime}-t_{1}^{\prime}+\dfrac{v}{c^{2}}\left(x_{1}^{\prime}-x_{2}^{\prime}\right)}{\sqrt{1-\dfrac{v^{2}}{c^{2}}}}
-\end{equation*}
+\begin{align*}
+    \beforetext{故} t_{1}-t_{2}=\frac{t_{1}^{\prime}-t_{1}^{\prime}+\dfrac{v}{c^{2}}\left(x_{1}^{\prime}-x_{2}^{\prime}\right)}{\sqrt{1-\dfrac{v^{2}}{c^{2}}}}
+\end{align*}
 % 331.jpg
 假定对于$ K' $，事件的时序是先$ A $后$ B $，即$  t _ { 1 } ^ { \prime } - t _ 2 ^ { \prime } < 0  $ ，那么当
 $ \dfrac{v^{2}}{c^{2}} \times \left( x _ { 1 } ^ { \prime } - x _ { 2 } ^ { \prime } \right) $足够大，以致下式成立
 \begin{equation*}
     t _ { 1 } ^ { \prime } - t _ 2 ^ { \prime } + \frac { v } { c ^ { 2 } } \left( x _ 1 ^ { \prime } - x _ 2 ^ { \prime } \right) > 0
 \end{equation*}
-或者\vspace{-1.56em}
-\begin{equation}\label{eqn:11.05.04}
-    \left| \frac { x _ 1 ^ { \prime } - x _ 2 ^ { \prime } } { t _ 1 ^ { \prime } - t _ 2 ^ { \prime } } \right| > \frac { c ^ { 2 } } { v }
-\end{equation}
+\begin{align}\label{eqn:11.05.04}
+    \beforetext{或者}\left| \frac { x _ 1 ^ { \prime } - x _ 2 ^ { \prime } } { t _ 1 ^ { \prime } - t _ 2 ^ { \prime } } \right| > \frac { c ^ { 2 } } { v }
+\end{align}
 则事件的时序在$ K $中就颠倒过来了。是先$ B $后$ A $，即$  t _ { 1 } - t _ { 2 } > 0  $。
 这就证明了时序的相对性。
 
@@ -161,10 +160,9 @@ $ \dfrac{v^{2}}{c^{2}} \times \left( x _ { 1 } ^ { \prime } - x _ { 2 } ^ { \pri
         =&\bigg[c^{2}\left(t_{1}^{\prime}-t_{2}^{\prime}\right)^{2}-\left(x_{1}^{\prime}-x_{2}^{\prime}\right)^{2}-\left(y_{1}^{\prime}-y_{2}^{\prime}\right)^{2}
         -\left(z_{1}^{\prime}-z_{2}^{\prime}\right)^{2}\bigg]^{1 / 2}
 \end{align*}}
-或\vspace{-1.56em}
-\begin{equation*}
-    s = s ^ { \prime }
-\end{equation*}
+\begin{align*}
+    \beforetext{或} s = s ^ { \prime }
+\end{align*}
 这表明，对$ s $的测量结果不依赖于参照系的选择。
 
 对于在时空上无限邻近的两个事件，其时空间隔可以写成微
@@ -264,6 +262,8 @@ v _ x ^ { \prime } = c, v _ { y } ^ { \prime } = v _ { z } ^ { \prime } = 0 $，
 
 下面我们看几个例题。
 
+\clearpage
+
 \example 设地球在某个洛伦兹参考系中是静止的。在这个参
 % 335.jpg
 考系中进行测量时，一个宇宙飞船以速度$ \dfrac { 3 c } { 5 }  $离开地球飞向离地球
@@ -324,46 +324,46 @@ $ 3 $光年的点，然后再反转其速度方向回到地球上。在地球上
 当飞船与地球远离时，
 {\setlength{\mathindent}{4em}
 \begin{equation*}
-    v = + \frac { 3 } { 5 } c   \nu ^ { \prime } = \frac 1 2 \nu
+    v = + \frac { 3 } { 5 } c \qquad  \nu ^ { \prime } = \frac 1 2 \nu
 \end{equation*}}
 当飞船与地球接近时，
 {\setlength{\mathindent}{4em}
 \begin{equation*}
-    v = - \frac { 3 } { 5 } c   \nu ^ { \prime } = 2 \nu
+    v = - \frac { 3 } { 5 } c \qquad  \nu ^ { \prime } = 2 \nu
 \end{equation*}}
 
 据此，得以下两表中的结果。注意，飞船在$  t ^ { \prime } = 4   $时转向，此
 时飞船经受加速度。
 \vspace{0.8em}
-\begin{tablex}[!h]
+\begin{table}[!h]
     %\vspace{-1em}
     \caption{地球的光钟发出的脉冲读数$ t $到达飞船时，飞船上光钟的读数$ t' $}
     \label{tab:11.01}
     \centering
     %\setlength{\tabcolsep}{1.5em}
-    \begin{tabularx}{\linewidth}{C*{2}{|C}|c*{8}{|C}}
+    \begin{tblr}{colsep=5pt,colspec={X[c]*{2}{|X[c]}|c*{8}{|X[c]}}}
         \toprule
         $t$  & 0 & 1 & 2                      & 3   & 4 & 5   & 6 & 7   & 8 & 9   & 10 \\
         \midrule
         $t'$ & 0 & 2 & 4 (飞船转向) & 4.5 & 5 & 5.5 & 6 & 6.5 & 7 & 7.5 & 8 \\
         \bottomrule
-    \end{tabularx}
-\end{tablex}
+    \end{tblr}
+\end{table}
 \vspace{0.8em}
-\begin{tablex}[!h]
+\begin{table}[!h]
     %\vspace{-1em}
     \caption{飞船上光钟发出的脉冲读数$ t' $到达地球时，地球的光钟的读数$ t $}
     \label{tab:11.02}
     \centering
     %\setlength{\tabcolsep}{1.5em}
-    \begin{tabularx}{\linewidth}{C|C|C|C|C|c|C|C|C|C}
+    \begin{tblr}{X[c]*{4}{|X[c]}|c*{4}{|X[c]}}
         \toprule
         $t'$  & 0 & 1 & 2 & 3 & 4 (飞船转向) & 5   & 6 & 7   & 8  \\
         \midrule
         $t$   & 0 & 2 & 4 & 6 & 8           & 8.5 & 9 & 9.5 & 10  \\
         \bottomrule
-    \end{tabularx}
-\end{tablex}
+    \end{tblr}
+\end{table}
 \vspace{0.8em}
 
 \example 一列火车在一平直的铁道上匀速行驶，铁道穿过
@@ -404,12 +404,12 @@ $ t ^ { \prime } $轴是
 
 % 338.jpg
 \clearpage
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/fig11.03}
     \caption{}
     \label{fig:11.03}
-\end{figurex}
+\end{figure}
 
 \begin{center}
     \zihao{6}
@@ -435,21 +435,21 @@ $ t ^ { \prime } $轴是
 隧道看守认为，事件的顺序是$ D, (A, B, C), E $，火车尾
 端是在两门关上之前进入隧道的，火车前端是在两门关上之后试
 % 339.jpg
-图冲出去的，所以火车变短与车撞铁门没有矛盾。司机认为，事
-件的
-\clearpage\noindent
-顺序是$ C, E, A, D, B $，他认为，前方铁门关得太早
+图冲出
+去的，所以火车变短与车撞铁门没有矛盾。司机认为，事
+件的顺\clearpage\noindent
+序是$ C, E, A, D, B $，他认为，前方铁门关得太早
 ($ t _ { C } ^ { \prime } < t _ { A } ^ { \prime } $)  ，
 发生了碰撞，而碰撞的讯号沿碰撞光锥线传播，尚未传到
 火车后端，故不知撞车事件的火车后端继续行驶，使得它在关得
 太迟的后方铁门落下之前进入隧道($ t _ { B } ^ { \prime } < t _ { D } ^ { \prime } $)。
 
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/fig11.04}
     \caption{}
     \label{fig:11.04}
-\end{figurex}
+\end{figure}
 
 \begin{center}
     \zihao{6}
@@ -517,10 +517,9 @@ $ t ^ { \prime } $轴是
     \tg \theta ^ { \prime } < \infty
 \end{equation*}
 % 341.jpg
-或\vspace{-1.56em}
-\begin{equation*}
-    l \cos \theta \ch \varphi + l \sh \varphi > 0
-\end{equation*}
+\begin{align*}
+    \beforetext{或} l \cos \theta \ch \varphi + l \sh \varphi > 0
+\end{align*}
 即
 \begin{equation*}
     \cos \theta > - \th \varphi
@@ -542,14 +541,14 @@ $ t ^ { \prime } $轴是
 武仙等星座环绕在它的周围\lhbrak 图\ref{fig:11.06a}\rhbrak ，南天的星不在视野之
 内。
 
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \subfigure[\label{fig:11.06a}]{\includegraphics{figure/fig11.06a}}
     \subfigure[\label{fig:11.06b}]{\includegraphics{figure/fig11.06b}}
     \subfigure[\label{fig:11.06c}]{\includegraphics{figure/fig11.06c}}
     \caption{不同速度时飞船人看到的景象}
     \label{fig:11.06}
-\end{figurex}
+\end{figure}
 
 飞船加快速度，当达到光速的一半时，展现在A眼前的星空
 景象将大大变化了。他看到原来在北极星周围的屋都向中央聚
