--- a/tex/body/M11.06-Mechanics of Relativity.tex
+++ b/tex/body/M11.06-Mechanics of Relativity.tex
@@ -15,13 +15,10 @@
 \begin{equation}\label{eqn:11.06.01}
     \begin{split}
         \frac { d } { d t } \left( m v _ { x } \right) &= F _ { x } \\
-        \frac { d } { d t } \left( m v _ { y } \right) &= F _ { y }
+        \frac { d } { d t } \left( m v _ { y } \right) &= F _ { y } \\
+        \frac { d } { d t } \left( m v _ { z } \right) &= F _ { z }
     \end{split}
 \end{equation}
-% 343.jpg
-\begin{equation*}
-    \frac { d } { d t } = \left( m v _ { z } \right) = F _ { z }
-\end{equation*}
 但是，不同于牛顿情况，现在质量$ m $及力$ F $不再是绝对量，即相
 对于不同的坐标系，其数值是不同的。只当速度小时，这二者才
 是绝对量。我们不去全面地证明方程\eqref{eqn:11.06.01}如何符合狭义相对
@@ -61,14 +58,14 @@
     \frac { m _ { 1 } } { m _ { 2 } } = - \frac { u _ { 2 } } { u _ { 1 } }
 \end{equation}
 % 344.jpg
+\clearpage\noindent
 另一方面，由式\eqref{eqn:11.06.04}及式\eqref{eqn:11.06.06}，可得
 \begin{equation}\label{eqn:11.06.08}
     m _ 1 ^ { \prime } u _ 1 ^ { \prime } + m _ 2 ^ { \prime } u _ 2 ^ { \prime } = - \left( m _ 1 ^ { \prime } + m _ 2 ^ { \prime } \right) v
 \end{equation}
-即\vspace{-1.56em}
-\begin{equation}\label{eqn:11.06.09}
-    \frac { m _ { 1 } ^ { \prime } } { m _ { 2 } ^ { \prime } } = - \frac { \left( u _ { 2 } ^ { \prime } + v \right) } { \left( u _ { 1 } ^ { \prime } + v \right) }
-\end{equation}
+\begin{align}\label{eqn:11.06.09}
+    \beforetext{即}\frac { m _ { 1 } ^ { \prime } } { m _ { 2 } ^ { \prime } } = - \frac { \left( u _ { 2 } ^ { \prime } + v \right) } { \left( u _ { 1 } ^ { \prime } + v \right) }
+\end{align}
 再由相对论速度合成公式\eqref{eqn:11.05.09}，有
 \begin{equation*}
     \begin{aligned}
@@ -84,10 +81,9 @@
 \begin{equation*}
     \frac{m_{1}^{\prime}}{m_{2}^{\prime}}=\frac{1+{v u_{2}^{\prime}}/{c^{2}}}{1+{v u_{1}^{\prime}}/{c^{2}}} \cdot \frac{m_{1}}{m_{2}}
 \end{equation*}
-即\vspace{-1.56em}
-\begin{equation}\label{eqn:11.06.10}
-    \frac{m_{1}^{\prime} / m_{1}}{m_{2}^{\prime} / m_{2}}=\frac{1+v u_{2}^{\prime} / c^{2}}{1+v u_{1}^{\prime} / c^{2}}
-\end{equation}
+\begin{align}\label{eqn:11.06.10}
+    \beforetext{即}\frac{m_{1}^{\prime} / m_{1}}{m_{2}^{\prime} / m_{2}}=\frac{1+v u_{2}^{\prime} / c^{2}}{1+v u_{1}^{\prime} / c^{2}}
+\end{align}
 注意下列公式
 \begin{equation*}
     \begin{aligned}
@@ -97,10 +93,9 @@
 \end{equation*}
 % 345.jpg
 \clearpage\noindent
-即\vspace{-1.56em}
-\begin{equation*}
-    1+\frac{v u_{1}^{\prime}}{c^{2}}=\frac{\sqrt{1-u_{1}^{\prime 2} / c^{2}}}{\sqrt{1-u_{1}^{2} / c^{2}}} \cdot \sqrt{1-\frac{v^{2}}{c^{2}}}
-\end{equation*}
+\begin{align*}
+    \beforetext{即}1+\frac{v u_{1}^{\prime}}{c^{2}}=\frac{\sqrt{1-u_{1}^{\prime 2} / c^{2}}}{\sqrt{1-u_{1}^{2} / c^{2}}} \cdot \sqrt{1-\frac{v^{2}}{c^{2}}}
+\end{align*}
 类似地
 \begin{equation*}
     1+\frac{v u_{2}^{\prime}}{c^{2}}=\frac{\sqrt{1-u_{2}^{\prime 2} / c^{2}}}{\sqrt{1-u_{2}^{2} / c^{2}}} \cdot \sqrt{1-\frac{v^{2}}{c^{2}}}
