--- a/tex/body/M11.07-Mass-Energy Relation.tex
+++ b/tex/body/M11.07-Mass-Energy Relation.tex
@@ -40,10 +40,9 @@
         &=\int_{1}^{2} c^{2}  \dif m
     \end{aligned}
 \end{equation*}
-即\vspace{-1.2em}
-\begin{equation}\label{eqn:11.07.05}
-    \Delta E = c ^ { 2 } \Delta m
-\end{equation}
+\begin{align}\label{eqn:11.07.05}
+    \beforetext{即}\Delta E = c ^ { 2 } \Delta m
+\end{align}
 此式表明能量的变化与质量的变化之间有简单的比例关系。它意
 味着能量与质量本身之间存在着简单的比例关系，即
 \begin{equation}\label{eqn:11.07.06}
