--- a/tex/body/M12.03-Criticism of Absolute Space-Time.tex
+++ b/tex/body/M12.03-Criticism of Absolute Space-Time.tex
@@ -48,7 +48,7 @@
 有许多根本性的不同，但在加速度具有绝对性这一点上，两
 种体系是相同的。
 
-\begin{figurex}
+\begin{figure}[h]
     \vspace{-0.8em}
     \centering
     \subfigure[\label{fig:12.11a}]{\includegraphics{figure/fig12.11a}}
@@ -56,7 +56,7 @@
     \subfigure[\label{fig:12.11b}]{\includegraphics{figure/fig12.11b}}
     \caption{牛顿的水桶实验}
     \label{fig:12.11}
-\end{figurex}
+\end{figure}
 
 牛顿的水桶判别法受到反对绝对时空的人的批评。最有
 力的批评是马赫给出的。马赫在《发展中的力学》一书中写
