--- a/tex/body/M12.04-Equivalence Principle.tex
+++ b/tex/body/M12.04-Equivalence Principle.tex
@@ -26,10 +26,9 @@ $ \vec{a} ^ { \prime } = \vec{a} - \vec{g} $，而其他作用力同前，故有
 \begin{equation*}
     m \left( \vec{a} ^ { \prime } + \vec{g} \right) = m \vec{g} + \vec{f} _ \text{外}
 \end{equation*}
-即\vspace{-2em}
-\begin{equation*}
-    m \vec{a} ^ { \prime } = \vec{f} _ \text{外}
-\end{equation*}
+\begin{align*}
+    \beforetext{即} m \vec{a} ^ { \prime } = \vec{f} _ \text{外}
+\end{align*}
 在这个方程中引力不再出现。
 
 现在，参考系$ K' $是引力作用下的自由下落参考系。因此，
