--- a/tex/body/M12.06-Cosider Question.tex
+++ b/tex/body/M12.06-Cosider Question.tex
@@ -5,7 +5,7 @@
 
 \question 科里奥利力做功吗？别的惯性力做功吗？
 % 373.jpg
-
+\clearpage
 \question 如果定义物体的重量为地球作用于物体上的万有引力，并
 把它叫做物体的“实重”，而把用弹簧秤所测得的物体的重量叫
 做“视重”。试问：
