--- a/tex/body/M12.07-Exercises.tex
+++ b/tex/body/M12.07-Exercises.tex
@@ -1,3 +1,4 @@
+\clearpage
 \begin{exercises}
 
 \exercise 用一根线把一物体悬挂在升降机中。
@@ -42,6 +43,7 @@
 % 375.jpg
 直且相对车厢为静止，然后突然放手，发生摆动。求：
 
+\clearpage
 (1) 悬线偏离竖直线$ \alpha $角时，摆锤的位能$ U $；
 
 (2) 使摆锤偏离$ \alpha $角的力所作的功A；
@@ -88,6 +90,7 @@
 % 376.jpg
 大？
 
+\clearpage
 \exercise 一圆环平放在水平面上，以匀角速度绕它的几何对称轴旋
 转，圆周上的速度为$ v $，证明环中的胁强(即应力)为$  \rho v ^ { 2 } / g   $。$\rho$是
 单位长度圆环的质量，$ g $是重力加速度。
