--- a/tex/body/M13.01-Answers-Chp01.tex
+++ b/tex/body/M13.01-Answers-Chp01.tex
@@ -6,22 +6,22 @@ $a_{1}^{\prime}=\dfrac{\dif v_{1}^{\prime}}{\dif t^{\prime}}=-\dfrac{v_{1} L}{v_
 
 $x=v_{1} t=\dfrac{v_{1} L}{v_{1}-v_{2}}\Big[1-\Big(\dfrac{v_{2}}{v_{1}}\Big)^{t^{\prime}}\Big]$\\
 因此，$ x\mathdash t'$图即正文中图\ref{fig:01.03} 的反转。
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/figa01.01}
     \caption{}
     \label{figa:01.01}
-\end{figurex}
+\end{figure}
 
 \answer (1) 鸟往返了无穷多次
 
 (2) 鸟共飞行了1秒，飞行距离为60公里
 
-(3) $t=\sumx_{h=0}^{t''-1}  \Big(\dfrac{L}{v_{2}+v_{1}}\Big)\Big(\dfrac{v_{2}-v_{1}}{v_{2}+v_{1}}\Big)^{n}$\\
+(3) $\displaystyle t= \sum_{h=0}^{t''-1}  \Big(\dfrac{L}{v_{2}+v_{1}}\Big)\Big(\dfrac{v_{2}-v_{1}}{v_{2}+v_{1}}\Big)^{n}$\\
 其中$ v_2 $为小鸟速率；$ v_1 $为火车速率
 
 所以得变换为
-$    t=\dfrac{2}{3} \sumx_{n=0}^{t'' -1}\Big(\dfrac{1}{3}\Big)^{n}$
+$\displaystyle    t=\dfrac{2}{3} \sum_{n=0}^{t'' -1}\Big(\dfrac{1}{3}\Big)^{n}$
 
 \answer $ \Delta s = 5 . 0 2   $米，方向东偏北$ 284^{\circ} $
 
