--- a/tex/body/M13.02-Answers-Chp02.tex
+++ b/tex/body/M13.02-Answers-Chp02.tex
@@ -4,23 +4,27 @@
 \answer 取$ x $轴沿飞机航向，$ y $轴竖直地指向地面
 
 (1) 取发射点为原点，炮弹轨迹方程为
+
 $    y = \dfrac { g x ^ { 2 } } { 2 \left( v _ { 0 } + v \right) }$
 
 
 (2) 取发射点为原点，炮弹轨迹方程为
+
 $    y = \dfrac { g x ^ { 2 } } { 2 v ^ { 2 } }$
 
 (3) 取炮弹质心为原点，飞机发射点之轨迹方程为
+
 $    y = - \dfrac { g x ^ { 2 } } { 2 v ^ { 2 } }$
 
-\clearpage
 \answer $ | \vec{v} | = 2 1 . 6   $公里，与水平的车行方向夹角为 $ \theta = 7 3 ^ { \circ } 5 4 ^ { \prime }   $，如图所示
-\begin{figurex}
+\begin{figure}[h]
+    \vspace{-0.8em}
     \centering
     \includegraphics{figure/figa02.01}
     \caption{}
     \label{figa:02.01}
-\end{figurex}
+    \vspace{-0.8em}
+\end{figure}
 
 \stepcounter{answer}
 \answer 水流速率$  v = 5 . 0   $公里/时
@@ -40,14 +44,14 @@ $    y = - \dfrac { g x ^ { 2 } } { 2 v ^ { 2 } }$
 \begin{equation*}
     \theta = \sin ^ { - 1 } \dfrac { u } { v } = 1 1 ^ { \circ } 3 0 '
 \end{equation*}\vspace{-1.3em}
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \subfigure[]{\includegraphics{figure/figa02.02a}}
     \qquad
     \subfigure[]{\includegraphics{figure/figa02.02b}}
     \caption{}
     \label{figa:02.02}
-\end{figurex}\vspace{-1em}
+\end{figure}\vspace{-1em}
 
 \answer $ t _ { 0 } = \dfrac { 2 L } { u } $
 
