--- a/tex/body/M13.03-Answers-Chp03.tex
+++ b/tex/body/M13.03-Answers-Chp03.tex
@@ -146,12 +146,12 @@ $ T _ { 2 } = - 4 . 4 6   $牛顿
 \answer (1) $ T \left( \theta \right) = \lambda R g \sin \theta  $
 
 (2) $ N \left( \theta \right) \Delta \theta = 2 \lambda R g \sin \alpha \cdot \Delta \theta  $
-\begin{figurex}
+\begin{figure}[h]
     \centering
     \includegraphics{figure/figa03.01}
     \caption{}
     \label{figa:03.01}
-\end{figurex}
+\end{figure}
 
 $\sum N _ {\text{水平}} = \displaystyle \int_{0}^{\frac{\pi}{2}} N(\theta) \cos \theta d \theta=\lambda P g=T\left(\dfrac{\pi}{2}\right)=T_{A}$\\
 这是绳的平衡条件
@@ -162,13 +162,15 @@ $\sum N _ {\text{水平}} = \displaystyle \int_{0}^{\frac{\pi}{2}} N(\theta) \co
 
 \answer $ T = M \omega ^ { 2 } l \big/ \left( 2 \uppi \right) ^ { 2 }   $
 
-\answer (1) \vspace{-2em}
-\begin{figurex}
+\answer (1)
+\begin{figure}[h]
+    \vspace{-0.8em}
     \centering
     \includegraphics{figure/figa03.02}
     \caption{}
     \label{figa:03.02}
-\end{figurex}
+    \vspace{-0.8em}
+\end{figure}
 
 (2) $ T _ { 1 } = \dfrac { 1 } { 2 } \left( m \omega ^ { 2 } l + \sqrt { 2 } m g \right) $
 
