--- a/tex/body/M13.05-Answers-Chp05.tex
+++ b/tex/body/M13.05-Answers-Chp05.tex
@@ -5,4 +5,5 @@
 度因子\vspace{-0.25em}
 
 \answer 因为
-$\dfrac{\dif^{2} R(t)}{\dif t^{2}}=-\dfrac{4 \pi G}{3}\cdot\dfrac{\rho_{0} R_{0}^{3}}{R_0}<0,\dfrac{\dif}{\dif t}\Bigl[\dfrac{\dif R(t)}{\dif t}\Bigr]<0$，所以是减速的
+$\dfrac{\dif^{2} R(t)}{\dif t^{2}}=-\dfrac{4 \pi G}{3}\cdot\dfrac{\rho_{0} R_{0}^{3}}{R_0}<0,\dfrac{\dif}{\dif t}\Bigl[\dfrac{\dif R(t)}{\dif t}\Bigr]<0$\\
+所以是减速的
