--- a/tex/body/M13.06-Answers-Chp06.tex
+++ b/tex/body/M13.06-Answers-Chp06.tex
@@ -60,6 +60,7 @@ $ N _ { B } = \dfrac { 2 m g h } { R } - 3 m g  $
 % 389.jpg
 (2) $ h \geqslant 1 . 5 R   $
 
+\clearpage
 \answer $ \theta = \cos ^ { - 1 } \Bigl( \dfrac { 1 } { 8 } + \sqrt { \dfrac { 1 } { 9 } - \dfrac { M } { 6 m } } \Bigr)   $
 
 \answer (1) 绳渐伸长。在弹性限度内，升降机的动能转化为绳的弹性势能
