--- a/tex/body/M13.08-Answers-Chp08.tex
+++ b/tex/body/M13.08-Answers-Chp08.tex
@@ -70,7 +70,7 @@
 
 (2)向右，速率为$ 3.5 $米/秒
 
-\answer (1) $ v = v _ { 0 } + \sumx _ { a = 1 } ^ n \dfrac { m u } { W + a m } $
+\answer (1) $ v = v _ { 0 } + \sum _ { a = 1 } ^ n \dfrac { m u } { W + a m } $
 
 (2) $ v = v _ { 0 } + \dfrac { n m u } { W + n m }  $
 
