--- a/tex/body/M13.10-Answers-Chp10.tex
+++ b/tex/body/M13.10-Answers-Chp10.tex
@@ -47,7 +47,7 @@ $T_{2}=\dfrac{m g}{8 M+7 m}(7 M+2 m), \quad T_{3}=\dfrac{11 M m}{8 M I+7 m} g$
 
 \answer 转了 $ \dfrac { 1 } { 2 \uppi } \sqrt { \dfrac { 3 h } { a } }  $转
 % 397.jpg
-
+\clearpage
 \answer $ M = - 0 . 0 8  $牛顿$ \cdot $米，其中负号表示与原转动角动量反方向
 
 \answer (1) $ v _ { B } = 1 2 .  1 $米/秒
