--- a/tex/body/M13.11-Answers-Chp11.tex
+++ b/tex/body/M13.11-Answers-Chp11.tex
@@ -20,7 +20,7 @@
 \aindent $ E _ {K \text{(牛)}} \operatorname{/} E _ {K \text{(相)}} = 0 . 0 8   $
 
 % 398.jpg
-\answer {\ziju{-0.1pt}少算了\!$ \Delta E _ { K }\! \approx \!2 . 7 \times 1  0 ^ 4 $焦耳，\!用它可将飞船从地面上升高$ 0.34 $米}
+\answer 少算了$ \Delta E _ { K } \approx 2 . 7 \times 1  0 ^ 4 $焦耳，用它可将飞船从地面上升高$ 0.34 $米
 
 \answer $ P = 7 . 4 7 \times 1 0 ^ { - 18 }$公斤$ \cdot $米/秒
 
