--- a/tex/body/M13.12-Answers-Chp12.tex
+++ b/tex/body/M13.12-Answers-Chp12.tex
@@ -64,5 +64,5 @@ $ \vec{F} $为驾驶员作用于座位上的力，$\vec{F}$与向下的竖直方
 
 \answer $ \vec{F} = ( \underbrace{- 0 . 0 5 \vec{j}}_{\text{向南}} + \underbrace{0 . 0 6 \vec{k}} _{\text{向上，抵消一部分重力}} ) $牛顿
 
-\answer $ a = g \theta  $， $ \theta = 1 . 5 6 \times 1 0 ^ { - 1 1 } $弧度， 所以$ a = 1 . 5 3 \times 1 0 ^ { - 1 0 } \} $米/秒\textsuperscript{2}，方向沿
+\answer $ a = g \theta  $， $ \theta = 1 . 5 6 \times 1 0 ^ { - 1 1 } $弧度， 所以$ a = 1 . 5 3 \times 1 0 ^ { - 1 0 } $米/秒\textsuperscript{2}，方向沿
 着地面二者之联线
