--- a/tex/body/M01.03-Length.tex
+++ b/tex/body/M01.03-Length.tex
@@ -25,8 +25,7 @@
 
 %\renewcommand{\hsp}{\hspace{0.6em}}
 
-1983\ziju{0.05} 年10月召开的第十七届国际计量大会上已正式通过\ziju{0}
-\\
+1983年10月召开的第十七届国际计量大会上已正式通过了
 \begin{table}[!h]
   \centering
   \caption{一些典型物理现象的空间尺度}
@@ -39,14 +38,14 @@
 \end{table}
 \clearpage
 
-\noindent 了新的米的定义，即用光速值来定义“米”，以代替1960年的规定。
-新的米的定义是，米是光在真空中在1,299,792,458秒的时间间隔
-内所传播的路程长度。按这种新的定义，光速c是一固定的常数，即
+\noindent 新的米的定义，即用光速值来定义“米”，以代替1960年的规定。
+新的米的定义是，米是光在真空中在$ 1/299,792,458 $秒的时间间隔
+内所传播的路程长度。按这种新的定义，光速$ c $是一固定的常数，即
 \begin{equation*}
   c = 299,792,458 \, \text{米/秒}
 \end{equation*}
 
-表\ref{tab:01.03}~中列举了一些典型现象的空间尺度。目前，物理学中涉
+表\ref{tab:01.03}中列举了一些典型现象的空间尺度。目前，物理学中涉
 及的最太长度是$10^{28}$米，它是宇宙曲率半径的下限；已达到的最
 小长度为$10^{-20}$米，它是弱电统一的特征尺度。普朗克长度约为
 $10^{-35}$米，被认为是最小的长度，意思是说，在比普朗克长度更小
