--- a/tex/body/M10.03-Kinetic Energy of Rigid Body.tex
+++ b/tex/body/M10.03-Kinetic Energy of Rigid Body.tex
@@ -3,7 +3,7 @@
 刚体是由许多质点组成的。所以，刚体的动能就等于各质点
 的动能之和，即
 \begin{equation}\label{eqn:10.03.01}
-    T = \sumx _ { i = 1 } ^ { n } \dfrac { 1 } { 2 } m _ i v _ i ^ { 2 }
+    T = \sum _ { i = 1 } ^ { n } \dfrac { 1 } { 2 } m _ i v _ i ^ { 2 }
 \end{equation}
 
 上节中已经指出，刚体的运动总可以分解为随着某基点$ O $的
@@ -22,9 +22,9 @@
 所以，式\eqref{eqn:10.03.01}可以改写为
 \begin{equation}\label{eqn:10.03.02}
     \begin{split}
-                T &=\sumx_{i=1}^{n} \dfrac{1}{2} m_{i}\left(\vec{v}_{c}+\vec{v}_{i}^{\prime}\right)^{2} \\
-                &=\sumx_{i=1}^{n} \dfrac{1}{2} m_{i}\left(\vec{v}_{c}^{2}+\vec{v}_{i}^{2 \prime}+2 \vec{v}_{c} \cdot \vec{v}_{i}^{\prime}\right) \\
-                &=\sumx_{i=1}^{n} \dfrac{1}{2} m_{i} v_{c}^{2}+\sumx_{i=1}^{n} \dfrac{1}{2} m_{i} v_{i}^{\prime 2}+\sumx_{i=1}^{n} m_{i} \vec{v}_{i}^{\prime} \cdot \vec{v}_{c}
+                T &=\sum_{i=1}^{n} \dfrac{1}{2} m_{i}\left(\vec{v}_{c}+\vec{v}_{i}^{\prime}\right)^{2} \\
+                &=\sum_{i=1}^{n} \dfrac{1}{2} m_{i}\left(\vec{v}_{c}^{2}+\vec{v}_{i}^{2 \prime}+2 \vec{v}_{c} \cdot \vec{v}_{i}^{\prime}\right) \\
+                &=\sum_{i=1}^{n} \dfrac{1}{2} m_{i} v_{c}^{2}+\sum_{i=1}^{n} \dfrac{1}{2} m_{i} v_{i}^{\prime 2}+\sum_{i=1}^{n} m_{i} \vec{v}_{i}^{\prime} \cdot \vec{v}_{c}
     \end{split}
 \end{equation}
 因为
@@ -32,46 +32,43 @@ $ \vec{v} _ i ^ { \prime } = \dfrac { \dif \vec{r}'_ i }  { \dif t }  $，
 $ \vec{r}'_i $是第$ i $个质点相对于质心的位置矢量，所以
 % 294.jpg
 
-~\vspace{-1.56em}
+~\vspace{-1.5em}
 \begin{equation*}
-    \sumx _ { i = 0 } ^ { n } m _ { i } \vec{v}' _ { i } = \dfrac { \dif } { \dif t } \sumx_{ i = 1 }^ n m _ i \vec{r}_i
+    \sum _ { i = 0 } ^ { n } m _ { i } \vec{v}' _ { i } = \dfrac { \dif } { \dif t } \sum_{ i = 1 }^ n m _ i \vec{r}_i
 \end{equation*}
 按质心的定义，应有
 \begin{equation*}
-    \sumx _ { i = 1 } ^ { n } m _ { i } \vec{r} _ { i } ^ { \prime } = 0
+    \sum _ { i = 1 } ^ { n } m _ { i } \vec{r} _ { i } ^ { \prime } = 0
 \end{equation*}
 所以，式\eqref{eqn:10.03.02}中最后一项总为零，故有
 \begin{equation}\label{eqn:10.03.03}
     \begin{split}
-        T &= \dfrac { 1 } { 2 } \Big( \sumx _ { i = 1 } ^ { n } \Big) v _ { c } ^ { 2 } + \dfrac { 1 } { 2 } \sumx_{ i = 1 } ^ n m _ i v _ n ^ { \prime 2 } \\
-    &= \dfrac { 1 } { 2 } m v _ c ^ { 2 } + \dfrac { 1 } { 2 } \sumx_{ i = 1 } ^ n m _ i v _ n ^ { \prime 2 }
+        T &= \dfrac { 1 } { 2 } \Big( \sum _ { i = 1 } ^ { n } \Big) v _ { c } ^ { 2 } + \dfrac { 1 } { 2 } \sum_{ i = 1 } ^ n m _ i v _ n ^ { \prime 2 } \\
+    &= \dfrac { 1 } { 2 } m v _ c ^ { 2 } + \dfrac { 1 } { 2 } \sum_{ i = 1 } ^ n m _ i v _ n ^ { \prime 2 }
     \end{split}
 \end{equation}
 其中$ m = \sum\limits_{ i = 1 } ^ n m _ i $是刚体的总质量。上式表示刚体的动能的确可以看
 成两部分的和，即以质心为基点的平动动能$ \dfrac { 1 } { 2 } - m v _ c ^ { 2 }  $及相对于质心
 的转动能
 \begin{equation}\label{eqn:10.03.04}
-    T _ \text{转} = \frac { 1 } { 2 } \sumx_{ i = 1 } ^ n m _ i v _ n ^ { \prime 2 }
+    T _ \text{转} = \frac { 1 } { 2 } \sum_{ i = 1 } ^ n m _ i v _ n ^ { \prime 2 }
 \end{equation}
 如果转动角速度为$ \omega $，则
 \begin{equation}\label{eqn:10.03.05}
     v ^ { \prime } = r _ i \omega
 \end{equation}
-其中$ r _ i $是第$ i $个质点与转动轴的距离。将式\eqref{eqn:10.03.05}代入式\eqref{eqn:10.03.05}，得到\vspace{-1.56em}
+其中$ r _ i $是第$ i $个质点与转动轴的距离。将式\eqref{eqn:10.03.05}代入式\eqref{eqn:10.03.05}，得到
 \begin{equation}\label{eqn:10.03.06}
 \begin{split}
-        T _ \text{转} &= \dfrac { 1 } { 2 } \Big( \sumx_{ i = 1 } ^ n m _ i r _ i ^ 2 \Big) \omega ^ { 2 }  \\
+        T _ \text{转} &= \dfrac { 1 } { 2 } \Big( \sum_{ i = 1 } ^ n m _ i r _ i ^ 2 \Big) \omega ^ { 2 }  \\
     &= \dfrac { 1 } { 2 } I _ { c } \omega ^ { 2 }
 \end{split}
 \end{equation}
-其中\vspace{-1.56em}
-\begin{equation}\label{eqn:10.03.07}
-    I _ { c } = \sumx_{ i = 1 } ^ n m _ i r _ i ^ 2
-\end{equation}
+\begin{align}\label{eqn:10.03.07}
+    \beforetext{其中} I _ { c } = \sum_{ i = 1 } ^ n m _ i r _ i ^ 2
+\end{align}
 按式\eqref{eqn:09.04.09}，它就是该刚体相对于转动为$ \omega $的轴的转动惯量。由
-
 % 295.jpg
-\noindent
 式\eqref{eqn:10.03.04}、 \eqref{eqn:10.03.06} ，刚体动能\lhbrak 式\eqref{eqn:10.03.03}\rhbrak 可以写成
 \begin{equation}\label{eqn:10.03.08}
     T = \frac { 1 } { 2 } m v _ { c } ^ { 2 } + \frac { 1 } { 2 } I _ { c } \omega ^ { 2 }
@@ -92,11 +89,11 @@ $ \vec{r}'_i $是第$ i $个质点相对于质心的位置矢量，所以
 0$， 所以
 \begin{equation*}
     \begin{split}
-    T &=\sumx_{i=1}^{n} \dfrac{1}{2} m_{i} \vec{v}_{i}^{2} \\
-    &=\sumx_{i=1}^{n} \dfrac{1}{2} m_{i} \vec{v}_{i}^{\prime 2} \\
-    &=\sumx_{i=1}^{n} \dfrac{1}{2} m_{i} v_{i}^{\prime 2} \\
-    &=\sumx_{i=1}^{n} \dfrac{1}{2} m_{i} r^{2}_{Ai} \omega_{A}^{2} \\
-    &=\dfrac{1}{2}\Big(\sumx_{i=1}^{n} m_{i} r_{Ai}^{2}\Big) \omega_{A}^{2} \\
+    T &=\sum_{i=1}^{n} \dfrac{1}{2} m_{i} \vec{v}_{i}^{2} \\
+    &=\sum_{i=1}^{n} \dfrac{1}{2} m_{i} \vec{v}_{i}^{\prime 2} \\
+    &=\sum_{i=1}^{n} \dfrac{1}{2} m_{i} v_{i}^{\prime 2} \\
+    &=\sum_{i=1}^{n} \dfrac{1}{2} m_{i} r^{2}_{Ai} \omega_{A}^{2} \\
+    &=\dfrac{1}{2}\Big(\sum_{i=1}^{n} m_{i} r_{Ai}^{2}\Big) \omega_{A}^{2} \\
     &=\dfrac{1}{2} I^{\prime} \omega_{A}^{2}
     \end{split}
 \end{equation*}
@@ -111,14 +108,12 @@ $ \vec{r}'_i $是第$ i $个质点相对于质心的位置矢量，所以
 \begin{equation*}
     \frac { 1 } { 2 } I ^ { \prime } \omega ^ { 2 } = \frac { 1 } { 2 } m v _ { c } ^ { 2 } + \frac { 1 } { 2 } I _ { c } \omega ^ { 2 }
 \end{equation*}
-又\vspace{-1.56em}
-\begin{equation*}
-    v _ { c } = r _ { 0 } \omega
-\end{equation*}
-故\vspace{-1.56em}
-\begin{equation}\label{eqn:10.03.10}
-    I ^ { \prime } = m r _ 0 ^ { 2 } + I _ { c }
-\end{equation}
+\begin{align*}
+    \beforetext{又} v _ { c } = r _ { 0 } \omega
+\end{align*}
+\begin{align}\label{eqn:10.03.10}
+    \beforetext{故} I ^ { \prime } = m r _ 0 ^ { 2 } + I _ { c }
+\end{align}
 式\eqref{eqn:10.03.10}表明，\!车轮绕过$ A $点的轴的转动惯量$ I' $与绕过质心
 的、\!与之平行的轴的转动惯量$ I _ c $之间有一个简单关系式。\!可以证
 明，\!上述关系是普遍成立的，\!即对于任何刚体，\!绕任意转轴的转
